--- a/publican-redhat/ru-RU/Feedback.po
+++ b/publican-redhat/ru-RU/Feedback.po
@@ -5,59 +5,153 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 1.0\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2009-02-24 03:17+0000\n"
+"POT-Creation-Date: 2010-02-26 01:23+0000\n"
 "PO-Revision-Date: 2009-03-09 18:42+0300\n"
 "Last-Translator: Alexey Vasyukov <vasyukov@gmail.com>\n"
-"Language-Team: Russian Fedora Team <fedora-localization@www.russianfedora.ru>\n"
+"Language-Team: Russian Fedora Team <fedora-localization@www.russianfedora."
+"ru>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #. Tag: title
-#: Feedback.xml:6
+#, no-c-format
+msgid "Getting Help and Giving Feedback"
+msgstr ""
+
+#. Tag: title
+#: Feedback.xml:8
+#, no-c-format
+msgid "Do You Need Help?"
+msgstr ""
+
+#. Tag: primary
+#: Feedback.xml:10
+#, no-c-format
+msgid "help"
+msgstr ""
+
+#. Tag: secondary
+#: Feedback.xml:11
+#, no-c-format
+msgid "getting help"
+msgstr ""
+
+#. Tag: para
+#: Feedback.xml:13
+#, no-c-format
+msgid ""
+"If you experience difficulty with a procedure described in this "
+"documentation, you can find help in the following ways:"
+msgstr ""
+
+#. Tag: term
+#: Feedback.xml:18
+#, no-c-format
+msgid "Red Hat Knowledgebase"
+msgstr ""
+
+#. Tag: para
+#: Feedback.xml:20
+#, no-c-format
+msgid ""
+"Visit the Red Hat Knowledgebase at <ulink url=\"http://kbase.redhat.com\"></"
+"ulink> to search or browse through technical support articles about Red Hat "
+"products."
+msgstr ""
+
+#. Tag: term
+#: Feedback.xml:26
+#, no-c-format
+msgid "Red Hat Global Support Services"
+msgstr ""
+
+#. Tag: para
+#: Feedback.xml:28
+#, no-c-format
+msgid ""
+"Your Red Hat subscription entitles you to support from Red Hat Global "
+"Support Services (GSS). Visit <ulink url=\"http://support.redhat.com\"></"
+"ulink> for more information about obtaining help from GSS."
+msgstr ""
+
+#. Tag: term
+#: Feedback.xml:34
+#, no-c-format
+msgid "Other Red Hat documentation"
+msgstr ""
+
+#. Tag: para
+#: Feedback.xml:36
+#, no-c-format
+msgid ""
+"Access other Red Hat documentation at <ulink url=\"http://www.redhat.com/docs"
+"\"></ulink>"
+msgstr ""
+
+#. Tag: term
+#: Feedback.xml:42
+#, no-c-format
+msgid "Red Hat electronic mailing lists"
+msgstr ""
+
+#. Tag: para
+#: Feedback.xml:44
+#, no-c-format
+msgid ""
+"Red Hat hosts a large number of electronic mailing lists for discussion of "
+"Red Hat software and technology. You can find a list of publicly available "
+"lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\"></ulink>. "
+"Click on the name of any list to subscribe to that list or to access the "
+"list archives."
+msgstr ""
+
+#. Tag: title
+#: Feedback.xml:53
 #, no-c-format
 msgid "We Need Feedback!"
 msgstr "Нам нужны Ваши отзывы!"
 
 #. Tag: primary
-#: Feedback.xml:8
+#: Feedback.xml:55
 #, no-c-format
 msgid "feedback"
 msgstr "обратная связь"
 
 #. Tag: secondary
-#: Feedback.xml:9
+#: Feedback.xml:56
 #, no-c-format
 msgid "contact information for this manual"
 msgstr "контактная информация по этому руководству"
 
 #. Tag: para
-#: Feedback.xml:11
+#: Feedback.xml:58
 #, no-c-format
 msgid ""
 "If you find a typographical error in this manual, or if you have thought of "
 "a way to make this manual better, we would love to hear from you! Please "
-"submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product "
+"submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/"
+"\">http://bugzilla.redhat.com/</ulink> against the product "
 "<application>&PRODUCT;.</application>"
 msgstr ""
 "Если Вы нашли опечатку в этом руководстве, или у Вас есть идеи, как его "
 "улучшить, мы будем рады выслушать Вас! Пожалуйста, оставьте сообщение в "
-"Bugzilla по адресу <ulink url=\"http://bugzilla.redhat.com/"
-"\">http://bugzilla.redhat.com/</ulink>, выбрав продукт "
-"<application>&PRODUCT;.</application>"
+"Bugzilla по адресу <ulink url=\"http://bugzilla.redhat.com/\">http://"
+"bugzilla.redhat.com/</ulink>, выбрав продукт <application>&PRODUCT;.</"
+"application>"
 
 #. Tag: para
-#: Feedback.xml:16
-#, no-c-format
+#: Feedback.xml:61
+#, fuzzy, no-c-format
 msgid ""
-"When submitting a bug report, be sure to mention the manual's identifier: "
-"<citetitle>&BOOKID;</citetitle>"
+"When submitting a bug report, be sure to mention the manual&#39;s "
+"identifier: <citetitle>&BOOKID;</citetitle>"
 msgstr ""
 "Убедитесь, что в сообщении об ошибке Вы указали идентификатор данного "
 "руководства: <citetitle>&BOOKID;</citetitle>."
 
 #. Tag: para
-#: Feedback.xml:20
+#: Feedback.xml:64
 #, no-c-format
 msgid ""
 "If you have a suggestion for improving the documentation, try to be as "
