--- a/publican-redhat/bn-IN/Feedback.po
+++ b/publican-redhat/bn-IN/Feedback.po
@@ -3,7 +3,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
-"POT-Creation-Date: 2007-10-10 11:15+1000\n"
+"Report-Msgid-Bugs-To: http://bugs.kde.org\n"
+"POT-Creation-Date: 2010-02-26 01:23+0000\n"
 "PO-Revision-Date: 2007-11-05 12:25+0530\n"
 "Last-Translator: Runa Bhattacharjee <runab@redhat.com>\n"
 "Language-Team: Bengali INDIA\n"
@@ -13,36 +14,145 @@ msgstr ""
 "X-Generator: KBabel 1.11.4\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-#: Feedback.xml:6(title)
+#. Tag: title
+#, no-c-format
+msgid "Getting Help and Giving Feedback"
+msgstr ""
+
+#. Tag: title
+#: Feedback.xml:8
+#, no-c-format
+msgid "Do You Need Help?"
+msgstr ""
+
+#. Tag: primary
+#: Feedback.xml:10
+#, no-c-format
+msgid "help"
+msgstr ""
+
+#. Tag: secondary
+#: Feedback.xml:11
+#, no-c-format
+msgid "getting help"
+msgstr ""
+
+#. Tag: para
+#: Feedback.xml:13
+#, no-c-format
+msgid ""
+"If you experience difficulty with a procedure described in this "
+"documentation, you can find help in the following ways:"
+msgstr ""
+
+#. Tag: term
+#: Feedback.xml:18
+#, no-c-format
+msgid "Red Hat Knowledgebase"
+msgstr ""
+
+#. Tag: para
+#: Feedback.xml:20
+#, no-c-format
+msgid ""
+"Visit the Red Hat Knowledgebase at <ulink url=\"http://kbase.redhat.com\"></"
+"ulink> to search or browse through technical support articles about Red Hat "
+"products."
+msgstr ""
+
+#. Tag: term
+#: Feedback.xml:26
+#, no-c-format
+msgid "Red Hat Global Support Services"
+msgstr ""
+
+#. Tag: para
+#: Feedback.xml:28
+#, no-c-format
+msgid ""
+"Your Red Hat subscription entitles you to support from Red Hat Global "
+"Support Services (GSS). Visit <ulink url=\"http://support.redhat.com\"></"
+"ulink> for more information about obtaining help from GSS."
+msgstr ""
+
+#. Tag: term
+#: Feedback.xml:34
+#, no-c-format
+msgid "Other Red Hat documentation"
+msgstr ""
+
+#. Tag: para
+#: Feedback.xml:36
+#, no-c-format
+msgid ""
+"Access other Red Hat documentation at <ulink url=\"http://www.redhat.com/docs"
+"\"></ulink>"
+msgstr ""
+
+#. Tag: term
+#: Feedback.xml:42
+#, no-c-format
+msgid "Red Hat electronic mailing lists"
+msgstr ""
+
+#. Tag: para
+#: Feedback.xml:44
+#, no-c-format
+msgid ""
+"Red Hat hosts a large number of electronic mailing lists for discussion of "
+"Red Hat software and technology. You can find a list of publicly available "
+"lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\"></ulink>. "
+"Click on the name of any list to subscribe to that list or to access the "
+"list archives."
+msgstr ""
+
+#. Tag: title
+#: Feedback.xml:53
+#, no-c-format
 msgid "We Need Feedback!"
 msgstr "আপনার মতামত আমাদের নিশ্চয় জানাবেন!"
 
-#: Feedback.xml:8(primary)
+#. Tag: primary
+#: Feedback.xml:55
+#, no-c-format
 msgid "feedback"
 msgstr "মতামত"
 
-#: Feedback.xml:9(secondary)
+#. Tag: secondary
+#: Feedback.xml:56
+#, no-c-format
 msgid "contact information for this manual"
 msgstr "এই সহায়ক-পুস্তিকা সম্বন্ধে যোগাযোগের তথ্য"
 
-#: Feedback.xml:11(para)
+#. Tag: para
+#: Feedback.xml:58
+#, no-c-format
 msgid ""
 "If you find a typographical error in this manual, or if you have thought of "
 "a way to make this manual better, we would love to hear from you! Please "
-"submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product "
+"submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/"
+"\">http://bugzilla.redhat.com/</ulink> against the product "
 "<application>&PRODUCT;.</application>"
 msgstr ""
-"যদি আপনি কোনো ত্রুটি লক্ষ্য করেন অথবা এই পুস্তিকাটি আরো উন্নত করার কোনো প্রস্তাব আপনি দিতে ইচ্ছুক থাকলে, আমাদের নির্দ্বিধায় তা জানান।! অনুগ্রহ করে <application>&PRODUCT;.</application> উৎপাদনের জন্য Bugzilla-তে সমস্ত বিবরণসহ একটি রিপোর্ট দায়ের করুন: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink>।"
+"যদি আপনি কোনো ত্রুটি লক্ষ্য করেন অথবা এই পুস্তিকাটি আরো উন্নত করার কোনো প্রস্তাব আপনি "
+"দিতে ইচ্ছুক থাকলে, আমাদের নির্দ্বিধায় তা জানান।! অনুগ্রহ করে "
+"<application>&PRODUCT;.</application> উৎপাদনের জন্য Bugzilla-তে সমস্ত বিবরণসহ "
+"একটি রিপোর্ট দায়ের করুন: <ulink url=\"http://bugzilla.redhat.com/\">http://"
+"bugzilla.redhat.com/</ulink>।"
 
-#: Feedback.xml:16(para)
+#. Tag: para
+#: Feedback.xml:61
+#, fuzzy, no-c-format
 msgid ""
-"When submitting a bug report, be sure to mention the manual's identifier: "
-"<citetitle>&BOOKID;</citetitle>"
+"When submitting a bug report, be sure to mention the manual&#39;s "
+"identifier: <citetitle>&BOOKID;</citetitle>"
 msgstr ""
 "বাগ সম্পর্কে সূচনা দেওয়ার সময় সহায়ক-পুস্তিকার পরিচয় উল্লেখ করা আবশ্যক: "
 "<citetitle>&BOOKID;</citetitle>"
 
-#: Feedback.xml:20(para)
+#. Tag: para
+#: Feedback.xml:64
+#, no-c-format
 msgid ""
 "If you have a suggestion for improving the documentation, try to be as "
 "specific as possible when describing it. If you have found an error, please "
@@ -54,8 +164,5 @@ msgstr ""
 "তাহলে অনুগ্রহ করে সংশ্লিষ্ট অনুচ্ছেদ সংখ্যা এবং পার্শ্ববর্তী কিছু অংশ উল্লেখ করুন যার "
 "সাহায্যে আমরা ত্রুটির অবস্থান সনাক্ত করতে পারব।"
 
-#. Put one translator per line, in the form of NAME <EMAIL>, YEAR1, YEAR2.
-#: Feedback.xml:0(None)
-msgid "translator-credits"
-msgstr "রুণা ভট্টাচার্য্য <runab@redhat.com> ২০০৭"
-
+#~ msgid "translator-credits"
+#~ msgstr "রুণা ভট্টাচার্য্য <runab@redhat.com> ২০০৭"
