--- a/publican-redhat/es-ES/Feedback.po
+++ b/publican-redhat/es-ES/Feedback.po
@@ -3,7 +3,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
-"POT-Creation-Date: 2007-10-10 11:15+1000\n"
+"Report-Msgid-Bugs-To: http://bugs.kde.org\n"
+"POT-Creation-Date: 2010-02-26 01:23+0000\n"
 "PO-Revision-Date: 2007-10-23 14:10+1000\n"
 "Last-Translator: Manuel Ospina <mospina@redhat.com>\n"
 "Language-Team: Español <en@li.org>\n"
@@ -12,42 +13,155 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
 
-#: Feedback.xml:6(title)
+#. Tag: title
+#, no-c-format
+msgid "Getting Help and Giving Feedback"
+msgstr ""
+
+#. Tag: title
+#: Feedback.xml:8
+#, no-c-format
+msgid "Do You Need Help?"
+msgstr ""
+
+#. Tag: primary
+#: Feedback.xml:10
+#, no-c-format
+msgid "help"
+msgstr ""
+
+#. Tag: secondary
+#: Feedback.xml:11
+#, no-c-format
+msgid "getting help"
+msgstr ""
+
+#. Tag: para
+#: Feedback.xml:13
+#, no-c-format
+msgid ""
+"If you experience difficulty with a procedure described in this "
+"documentation, you can find help in the following ways:"
+msgstr ""
+
+#. Tag: term
+#: Feedback.xml:18
+#, no-c-format
+msgid "Red Hat Knowledgebase"
+msgstr ""
+
+#. Tag: para
+#: Feedback.xml:20
+#, no-c-format
+msgid ""
+"Visit the Red Hat Knowledgebase at <ulink url=\"http://kbase.redhat.com\"></"
+"ulink> to search or browse through technical support articles about Red Hat "
+"products."
+msgstr ""
+
+#. Tag: term
+#: Feedback.xml:26
+#, no-c-format
+msgid "Red Hat Global Support Services"
+msgstr ""
+
+#. Tag: para
+#: Feedback.xml:28
+#, no-c-format
+msgid ""
+"Your Red Hat subscription entitles you to support from Red Hat Global "
+"Support Services (GSS). Visit <ulink url=\"http://support.redhat.com\"></"
+"ulink> for more information about obtaining help from GSS."
+msgstr ""
+
+#. Tag: term
+#: Feedback.xml:34
+#, no-c-format
+msgid "Other Red Hat documentation"
+msgstr ""
+
+#. Tag: para
+#: Feedback.xml:36
+#, no-c-format
+msgid ""
+"Access other Red Hat documentation at <ulink url=\"http://www.redhat.com/docs"
+"\"></ulink>"
+msgstr ""
+
+#. Tag: term
+#: Feedback.xml:42
+#, no-c-format
+msgid "Red Hat electronic mailing lists"
+msgstr ""
+
+#. Tag: para
+#: Feedback.xml:44
+#, no-c-format
+msgid ""
+"Red Hat hosts a large number of electronic mailing lists for discussion of "
+"Red Hat software and technology. You can find a list of publicly available "
+"lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\"></ulink>. "
+"Click on the name of any list to subscribe to that list or to access the "
+"list archives."
+msgstr ""
+
+#. Tag: title
+#: Feedback.xml:53
+#, no-c-format
 msgid "We Need Feedback!"
 msgstr "¡Necesitamos sus comentarios!"
 
-#: Feedback.xml:8(primary)
+#. Tag: primary
+#: Feedback.xml:55
+#, no-c-format
 msgid "feedback"
 msgstr "comentarios"
 
-#: Feedback.xml:9(secondary)
+#. Tag: secondary
+#: Feedback.xml:56
+#, no-c-format
 msgid "contact information for this manual"
 msgstr "información de contacto para este manual"
 
-#: Feedback.xml:11(para)
+#. Tag: para
+#: Feedback.xml:58
+#, no-c-format
 msgid ""
 "If you find a typographical error in this manual, or if you have thought of "
 "a way to make this manual better, we would love to hear from you! Please "
-"submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product "
+"submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/"
+"\">http://bugzilla.redhat.com/</ulink> against the product "
 "<application>&PRODUCT;.</application>"
-msgstr "Si encuentra un error tipográfico en este manual o si sabe de alguna manera de mejorarlo, nos gustaría escuchar sus sugerencias. Por favor complete un reporte en Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> usando el producto <application>&PRODUCT;</application>."
+msgstr ""
+"Si encuentra un error tipográfico en este manual o si sabe de alguna manera "
+"de mejorarlo, nos gustaría escuchar sus sugerencias. Por favor complete un "
+"reporte en Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://"
+"bugzilla.redhat.com/</ulink> usando el producto <application>&PRODUCT;</"
+"application>."
 
-#: Feedback.xml:16(para)
+#. Tag: para
+#: Feedback.xml:61
+#, fuzzy, no-c-format
 msgid ""
-"When submitting a bug report, be sure to mention the manual's identifier: "
-"<citetitle>&BOOKID;</citetitle>"
-msgstr "Cuando envíe un reporte de error no olvide mencionar el identificador del manual: <citetitle>&BOOKID;</citetitle>"
+"When submitting a bug report, be sure to mention the manual&#39;s "
+"identifier: <citetitle>&BOOKID;</citetitle>"
+msgstr ""
+"Cuando envíe un reporte de error no olvide mencionar el identificador del "
+"manual: <citetitle>&BOOKID;</citetitle>"
 
-#: Feedback.xml:20(para)
+#. Tag: para
+#: Feedback.xml:64
+#, no-c-format
 msgid ""
 "If you have a suggestion for improving the documentation, try to be as "
 "specific as possible when describing it. If you have found an error, please "
 "include the section number and some of the surrounding text so we can find "
 "it easily."
-msgstr "Si tiene una sugerencia para mejorar la documentación, intente ser tan específico como sea posible cuando describa su sugerencia. Si ha encontrado un error, por favor incluya el número de sección y parte del texto que rodea el error para que podamos encontrarlo más fácilmente."
+msgstr ""
+"Si tiene una sugerencia para mejorar la documentación, intente ser tan "
+"específico como sea posible cuando describa su sugerencia. Si ha encontrado "
+"un error, por favor incluya el número de sección y parte del texto que rodea "
+"el error para que podamos encontrarlo más fácilmente."
 
-#. Put one translator per line, in the form of NAME <EMAIL>, YEAR1, YEAR2.
-#: Feedback.xml:0(None)
-msgid "translator-credits"
-msgstr "Manuel Ospina (mospina@redhat.com) 2007"
-
+#~ msgid "translator-credits"
+#~ msgstr "Manuel Ospina (mospina@redhat.com) 2007"
