--- a/publican-redhat/ml-IN/Feedback.po
+++ b/publican-redhat/ml-IN/Feedback.po
@@ -3,7 +3,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
-"POT-Creation-Date: 2007-10-10 11:15+1000\n"
+"Report-Msgid-Bugs-To: http://bugs.kde.org\n"
+"POT-Creation-Date: 2010-02-26 01:23+0000\n"
 "PO-Revision-Date: 2007-10-30 13:25+0530\n"
 "Last-Translator: Ani Peter <apeter@redhat.com>\n"
 "Language-Team: Malayalam\n"
@@ -12,52 +13,154 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
 
-#: Feedback.xml:6(title)
+#. Tag: title
+#, no-c-format
+msgid "Getting Help and Giving Feedback"
+msgstr ""
+
+#. Tag: title
+#: Feedback.xml:8
+#, no-c-format
+msgid "Do You Need Help?"
+msgstr ""
+
+#. Tag: primary
+#: Feedback.xml:10
+#, no-c-format
+msgid "help"
+msgstr ""
+
+#. Tag: secondary
+#: Feedback.xml:11
+#, no-c-format
+msgid "getting help"
+msgstr ""
+
+#. Tag: para
+#: Feedback.xml:13
+#, no-c-format
+msgid ""
+"If you experience difficulty with a procedure described in this "
+"documentation, you can find help in the following ways:"
+msgstr ""
+
+#. Tag: term
+#: Feedback.xml:18
+#, no-c-format
+msgid "Red Hat Knowledgebase"
+msgstr ""
+
+#. Tag: para
+#: Feedback.xml:20
+#, no-c-format
+msgid ""
+"Visit the Red Hat Knowledgebase at <ulink url=\"http://kbase.redhat.com\"></"
+"ulink> to search or browse through technical support articles about Red Hat "
+"products."
+msgstr ""
+
+#. Tag: term
+#: Feedback.xml:26
+#, no-c-format
+msgid "Red Hat Global Support Services"
+msgstr ""
+
+#. Tag: para
+#: Feedback.xml:28
+#, no-c-format
+msgid ""
+"Your Red Hat subscription entitles you to support from Red Hat Global "
+"Support Services (GSS). Visit <ulink url=\"http://support.redhat.com\"></"
+"ulink> for more information about obtaining help from GSS."
+msgstr ""
+
+#. Tag: term
+#: Feedback.xml:34
+#, no-c-format
+msgid "Other Red Hat documentation"
+msgstr ""
+
+#. Tag: para
+#: Feedback.xml:36
+#, no-c-format
+msgid ""
+"Access other Red Hat documentation at <ulink url=\"http://www.redhat.com/docs"
+"\"></ulink>"
+msgstr ""
+
+#. Tag: term
+#: Feedback.xml:42
+#, no-c-format
+msgid "Red Hat electronic mailing lists"
+msgstr ""
+
+#. Tag: para
+#: Feedback.xml:44
+#, no-c-format
+msgid ""
+"Red Hat hosts a large number of electronic mailing lists for discussion of "
+"Red Hat software and technology. You can find a list of publicly available "
+"lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\"></ulink>. "
+"Click on the name of any list to subscribe to that list or to access the "
+"list archives."
+msgstr ""
+
+#. Tag: title
+#: Feedback.xml:53
+#, no-c-format
 msgid "We Need Feedback!"
 msgstr "ഞങ്ങള്‍ക്ക് അഭിപ്റായം അയച്ചു തരിക!"
 
-#: Feedback.xml:8(primary)
+#. Tag: primary
+#: Feedback.xml:55
+#, no-c-format
 msgid "feedback"
 msgstr "അഭിപ്റായം"
 
-#: Feedback.xml:9(secondary)
+#. Tag: secondary
+#: Feedback.xml:56
+#, no-c-format
 msgid "contact information for this manual"
 msgstr "ഈ മാനുവലിനായി ബന്ധപ്പെടുവാനുള്ള വിവരങ്ങള്‍"
 
-#: Feedback.xml:11(para)
+#. Tag: para
+#: Feedback.xml:58
+#, no-c-format
 msgid ""
 "If you find a typographical error in this manual, or if you have thought of "
 "a way to make this manual better, we would love to hear from you! Please "
-"submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product "
+"submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/"
+"\">http://bugzilla.redhat.com/</ulink> against the product "
 "<application>&PRODUCT;.</application>"
 msgstr ""
-"നിങ്ങള്‍ക്ക് ഈ മാനുവലിലുള്ള പിശകുകള്‍ ഞങ്ങളെ അറിയിക്കണമെങ്കില്‍, അല്ലെങ്കില്‍ "
-"ഇത് കൂടുതല്‍ മെച്ചപ്പെടുത്തുന്നതിനുള്ള നിറ്‍ദ്ദേശങ്ങളും അഭിപ്റായങ്ങളും ഞങ്ങളെ "
-"അറിയിക്കുന്നതിനായി ദയവായി ബഗ്സിലായില്‍ <application>&PRODUCT;. "
-"</application> എന്ന പ്റൊഡക്ടിന് എതിരെ ഒരു റിപോറ്‍ട്ട് രേഖപ്പെടുത്തുക: "
-"<ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink>."
+"നിങ്ങള്‍ക്ക് ഈ മാനുവലിലുള്ള പിശകുകള്‍ ഞങ്ങളെ അറിയിക്കണമെങ്കില്‍, അല്ലെങ്കില്‍ ഇത് കൂടുതല്‍ "
+"മെച്ചപ്പെടുത്തുന്നതിനുള്ള നിറ്‍ദ്ദേശങ്ങളും അഭിപ്റായങ്ങളും ഞങ്ങളെ അറിയിക്കുന്നതിനായി ദയവായി "
+"ബഗ്സിലായില്‍ <application>&PRODUCT;. </application> എന്ന പ്റൊഡക്ടിന് എതിരെ ഒരു "
+"റിപോറ്‍ട്ട് രേഖപ്പെടുത്തുക: <ulink url=\"http://bugzilla.redhat.com/\">http://"
+"bugzilla.redhat.com/</ulink>."
 
-#: Feedback.xml:16(para)
+#. Tag: para
+#: Feedback.xml:61
+#, fuzzy, no-c-format
 msgid ""
-"When submitting a bug report, be sure to mention the manual's identifier: "
-"<citetitle>&BOOKID;</citetitle>"
+"When submitting a bug report, be sure to mention the manual&#39;s "
+"identifier: <citetitle>&BOOKID;</citetitle>"
 msgstr ""
-"ഒരു ബഗ് രേഖപ്പെടുത്തുമ്പോള്‍, മാനുവലിന്റെ ഐഡന്റിഫയറ്‍ നല്‍കുന്നു എന്ന് "
-"പ്റത്യേകം ഉറപ്പ് വരുത്തുക: <citetitle>&BOOKID;</citetitle>"
+"ഒരു ബഗ് രേഖപ്പെടുത്തുമ്പോള്‍, മാനുവലിന്റെ ഐഡന്റിഫയറ്‍ നല്‍കുന്നു എന്ന് പ്റത്യേകം ഉറപ്പ് വരുത്തുക: "
+"<citetitle>&BOOKID;</citetitle>"
 
-#: Feedback.xml:20(para)
+#. Tag: para
+#: Feedback.xml:64
+#, no-c-format
 msgid ""
 "If you have a suggestion for improving the documentation, try to be as "
 "specific as possible when describing it. If you have found an error, please "
 "include the section number and some of the surrounding text so we can find "
 "it easily."
 msgstr ""
-"ഈ വിവരണം നിങ്ങള്‍ക്ക് മെച്ചപ്പെടുത്തണമെങ്കില്‍, ദയവായി ഇത് വ്യക്തമായി "
-"വിവരിക്കേണ്ടതുണ്ട്. പിശകുകള്‍ രേഖപ്പെടുത്തുമ്പോള്‍, അത് ഏത് ഭാഗത്തെന്നും "
-"ചുറ്റുവട്ടത്തുള്ള ഏതെങ്കിലും വാചകളും ഉള്‍പ്പെടുത്തുന്നത് ഉത്തമമായിരിക്കും."
+"ഈ വിവരണം നിങ്ങള്‍ക്ക് മെച്ചപ്പെടുത്തണമെങ്കില്‍, ദയവായി ഇത് വ്യക്തമായി വിവരിക്കേണ്ടതുണ്ട്. പിശകുകള്‍ "
+"രേഖപ്പെടുത്തുമ്പോള്‍, അത് ഏത് ഭാഗത്തെന്നും ചുറ്റുവട്ടത്തുള്ള ഏതെങ്കിലും വാചകളും ഉള്‍പ്പെടുത്തുന്നത് "
+"ഉത്തമമായിരിക്കും."
 
-#. Put one translator per line, in the form of NAME <EMAIL>, YEAR1, YEAR2.
-#: Feedback.xml:0(None)
-msgid "translator-credits"
-msgstr "അനി പീറ്ററ്‍ <apeter@redhat.com>"
-
+#~ msgid "translator-credits"
+#~ msgstr "അനി പീറ്ററ്‍ <apeter@redhat.com>"
