--- a/publican-redhat/or-IN/Feedback.po
+++ b/publican-redhat/or-IN/Feedback.po
@@ -3,7 +3,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
-"POT-Creation-Date: 2007-10-10 11:15+1000\n"
+"Report-Msgid-Bugs-To: http://bugs.kde.org\n"
+"POT-Creation-Date: 2010-02-26 01:23+0000\n"
 "PO-Revision-Date: 2007-11-06 18:13+0530\n"
 "Last-Translator: Subhransu Behera <arya_subhransu@yahoo.co.in>\n"
 "Language-Team: Oriya <oriya-group@lists.sarovar.org>\n"
@@ -11,56 +12,158 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
-"Plural-Forms: Plural-Forms: nplurals=2; plural=(n!=1);\n\n"
+"Plural-Forms: Plural-Forms: nplurals=2; plural=(n!=1);\n"
+"\n"
 "\n"
 
-#: Feedback.xml:6(title)
+#. Tag: title
+#, no-c-format
+msgid "Getting Help and Giving Feedback"
+msgstr ""
+
+#. Tag: title
+#: Feedback.xml:8
+#, no-c-format
+msgid "Do You Need Help?"
+msgstr ""
+
+#. Tag: primary
+#: Feedback.xml:10
+#, no-c-format
+msgid "help"
+msgstr ""
+
+#. Tag: secondary
+#: Feedback.xml:11
+#, no-c-format
+msgid "getting help"
+msgstr ""
+
+#. Tag: para
+#: Feedback.xml:13
+#, no-c-format
+msgid ""
+"If you experience difficulty with a procedure described in this "
+"documentation, you can find help in the following ways:"
+msgstr ""
+
+#. Tag: term
+#: Feedback.xml:18
+#, no-c-format
+msgid "Red Hat Knowledgebase"
+msgstr ""
+
+#. Tag: para
+#: Feedback.xml:20
+#, no-c-format
+msgid ""
+"Visit the Red Hat Knowledgebase at <ulink url=\"http://kbase.redhat.com\"></"
+"ulink> to search or browse through technical support articles about Red Hat "
+"products."
+msgstr ""
+
+#. Tag: term
+#: Feedback.xml:26
+#, no-c-format
+msgid "Red Hat Global Support Services"
+msgstr ""
+
+#. Tag: para
+#: Feedback.xml:28
+#, no-c-format
+msgid ""
+"Your Red Hat subscription entitles you to support from Red Hat Global "
+"Support Services (GSS). Visit <ulink url=\"http://support.redhat.com\"></"
+"ulink> for more information about obtaining help from GSS."
+msgstr ""
+
+#. Tag: term
+#: Feedback.xml:34
+#, no-c-format
+msgid "Other Red Hat documentation"
+msgstr ""
+
+#. Tag: para
+#: Feedback.xml:36
+#, no-c-format
+msgid ""
+"Access other Red Hat documentation at <ulink url=\"http://www.redhat.com/docs"
+"\"></ulink>"
+msgstr ""
+
+#. Tag: term
+#: Feedback.xml:42
+#, no-c-format
+msgid "Red Hat electronic mailing lists"
+msgstr ""
+
+#. Tag: para
+#: Feedback.xml:44
+#, no-c-format
+msgid ""
+"Red Hat hosts a large number of electronic mailing lists for discussion of "
+"Red Hat software and technology. You can find a list of publicly available "
+"lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\"></ulink>. "
+"Click on the name of any list to subscribe to that list or to access the "
+"list archives."
+msgstr ""
+
+#. Tag: title
+#: Feedback.xml:53
+#, no-c-format
 msgid "We Need Feedback!"
 msgstr "ଆମେ ପ୍ରତିକ୍ରିୟା ଆବଶ୍ଯକ କରୁଅଛୁ!"
 
-#: Feedback.xml:8(primary)
+#. Tag: primary
+#: Feedback.xml:55
+#, no-c-format
 msgid "feedback"
 msgstr "ପ୍ରତିକ୍ରିୟା"
 
-#: Feedback.xml:9(secondary)
+#. Tag: secondary
+#: Feedback.xml:56
+#, no-c-format
 msgid "contact information for this manual"
 msgstr "ଏହି ମେନ୍ଯୁଆଲ ପାଇଁ ଯୋଗାଯୋଗ ସୂଚନା"
 
-#: Feedback.xml:11(para)
+#. Tag: para
+#: Feedback.xml:58
+#, no-c-format
 msgid ""
 "If you find a typographical error in this manual, or if you have thought of "
 "a way to make this manual better, we would love to hear from you! Please "
-"submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product "
+"submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/"
+"\">http://bugzilla.redhat.com/</ulink> against the product "
 "<application>&PRODUCT;.</application>"
 msgstr ""
-"ଆପଣ ଏହି ମେନ୍ଯୁଆଲରେ ଗୋଟିଏ ମୂଦ୍ରଣ ଜନିତ ତୃଟି ପାଇଲେ, କିମ୍ବା ଏହାକୁ ଉନ୍ନତ କରିବା ପାଇଁ "
-"ଆପଣଙ୍କ ନିକଟରେ କୌଣସି ଉପାୟ ଥିଲେ, ଆମେ ଆପଣଙ୍କ ନିକଟରୁ ସେ ବିଷୟରେ ଶୁଣିବା ପାଇଁ "
-"ଚାହିଁବୁ! ଦୟାକରି <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> "
-"କୁ ଯାଇ ବଗଜିଲାରେ <application>&PRODUCT;</application> ବିରୋଧରେ ଗୋଟିଏ "
-"ତୃଟି ବିବରଣୀ ଦିଅନ୍ତୁ।"
+"ଆପଣ ଏହି ମେନ୍ଯୁଆଲରେ ଗୋଟିଏ ମୂଦ୍ରଣ ଜନିତ ତୃଟି ପାଇଲେ, କିମ୍ବା ଏହାକୁ ଉନ୍ନତ କରିବା ପାଇଁ ଆପଣଙ୍କ ନିକଟରେ "
+"କୌଣସି ଉପାୟ ଥିଲେ, ଆମେ ଆପଣଙ୍କ ନିକଟରୁ ସେ ବିଷୟରେ ଶୁଣିବା ପାଇଁ ଚାହିଁବୁ! ଦୟାକରି <ulink url="
+"\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> କୁ ଯାଇ "
+"ବଗଜିଲାରେ <application>&PRODUCT;</application> ବିରୋଧରେ ଗୋଟିଏ ତୃଟି ବିବରଣୀ ଦିଅନ୍ତୁ।"
 
-#: Feedback.xml:16(para)
+#. Tag: para
+#: Feedback.xml:61
+#, fuzzy, no-c-format
 msgid ""
-"When submitting a bug report, be sure to mention the manual's identifier: "
-"<citetitle>&BOOKID;</citetitle>"
+"When submitting a bug report, be sure to mention the manual&#39;s "
+"identifier: <citetitle>&BOOKID;</citetitle>"
 msgstr ""
-"ଗୋଟିଏ ତୃଟି ବିବରଣୀ ଦେବା ସମୟରେ, ମେନ୍ଯୁଆଲର ପରିଚୟକକୁ ଉଲ୍ଲେଖ କରିବା ପାଇଁ ନିଶ୍ଚିତ "
-"ହୁଅନ୍ତୁ:<citetitle>&BOOKID;</citetitle>"
+"ଗୋଟିଏ ତୃଟି ବିବରଣୀ ଦେବା ସମୟରେ, ମେନ୍ଯୁଆଲର ପରିଚୟକକୁ ଉଲ୍ଲେଖ କରିବା ପାଇଁ ନିଶ୍ଚିତ ହୁଅନ୍ତୁ:"
+"<citetitle>&BOOKID;</citetitle>"
 
-#: Feedback.xml:20(para)
+#. Tag: para
+#: Feedback.xml:64
+#, no-c-format
 msgid ""
 "If you have a suggestion for improving the documentation, try to be as "
 "specific as possible when describing it. If you have found an error, please "
 "include the section number and some of the surrounding text so we can find "
 "it easily."
 msgstr ""
-" ଆପଣଙ୍କ ନିକଟରେ ଦଲିଲକୁ ଉନ୍ନତ କରିବା ପାଇଁ କୌଣସି ପ୍ରସ୍ତା ଥିଲେ, ଏହାକୁ ବର୍ଣ୍ଣନା କରିବା ସମୟରେ "
-"ଯେତେ ସମ୍ଭବ ସେତେ ସ୍ପଷ୍ଟ ଭାବରେ ଏହାକୁ ବ୍ଯାଖ୍ଯା କରିବା ପାଇଁ ଚେଷ୍ଟା କରନ୍ତୁ। ଆପଣ ଗୋଟିଏ ତୃଟି "
-"ପାଇଥିଲେ, ଦୟାକରି ବିଭାଗର ସଂଖ୍ଯା ଏବଂ ତା ସହିତ ଥିବା କିଛି ପାଠ୍ଯକୁ ଅନ୍ତର୍ଭୂକ୍ତ କରନ୍ତୁ ଯେପରିକି ଆମେ "
-"ତାହାକୁ ସହଜରେ ପାଇପାରିବୁ। "
+" ଆପଣଙ୍କ ନିକଟରେ ଦଲିଲକୁ ଉନ୍ନତ କରିବା ପାଇଁ କୌଣସି ପ୍ରସ୍ତା ଥିଲେ, ଏହାକୁ ବର୍ଣ୍ଣନା କରିବା ସମୟରେ ଯେତେ "
+"ସମ୍ଭବ ସେତେ ସ୍ପଷ୍ଟ ଭାବରେ ଏହାକୁ ବ୍ଯାଖ୍ଯା କରିବା ପାଇଁ ଚେଷ୍ଟା କରନ୍ତୁ। ଆପଣ ଗୋଟିଏ ତୃଟି ପାଇଥିଲେ, "
+"ଦୟାକରି ବିଭାଗର ସଂଖ୍ଯା ଏବଂ ତା ସହିତ ଥିବା କିଛି ପାଠ୍ଯକୁ ଅନ୍ତର୍ଭୂକ୍ତ କରନ୍ତୁ ଯେପରିକି ଆମେ ତାହାକୁ ସହଜରେ "
+"ପାଇପାରିବୁ। "
 
-#. Put one translator per line, in the form of NAME <EMAIL>, YEAR1, YEAR2.
-#: Feedback.xml:0(None)
-msgid "translator-credits"
-msgstr "ଶୁଭ୍ରାଂଶୁ ବେହେରା <arya_subhransu@yahoo.co.in>"
-
+#~ msgid "translator-credits"
+#~ msgstr "ଶୁଭ୍ରାଂଶୁ ବେହେରା <arya_subhransu@yahoo.co.in>"
