--- a/publican-redhat/pa-IN/Feedback.po
+++ b/publican-redhat/pa-IN/Feedback.po
@@ -3,7 +3,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
-"POT-Creation-Date: 2007-10-10 11:15+1000\n"
+"Report-Msgid-Bugs-To: http://bugs.kde.org\n"
+"POT-Creation-Date: 2010-02-26 01:23+0000\n"
 "PO-Revision-Date: 2007-10-30 11:59+0530\n"
 "Last-Translator: Jaswinder Singh <jsingh@redhat.com>\n"
 "Language-Team: Punjabi <fedora-trans-pa@redhat.com>\n"
@@ -12,46 +13,152 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
 
-#: Feedback.xml:6(title)
+#. Tag: title
+#, no-c-format
+msgid "Getting Help and Giving Feedback"
+msgstr ""
+
+#. Tag: title
+#: Feedback.xml:8
+#, no-c-format
+msgid "Do You Need Help?"
+msgstr ""
+
+#. Tag: primary
+#: Feedback.xml:10
+#, no-c-format
+msgid "help"
+msgstr ""
+
+#. Tag: secondary
+#: Feedback.xml:11
+#, no-c-format
+msgid "getting help"
+msgstr ""
+
+#. Tag: para
+#: Feedback.xml:13
+#, no-c-format
+msgid ""
+"If you experience difficulty with a procedure described in this "
+"documentation, you can find help in the following ways:"
+msgstr ""
+
+#. Tag: term
+#: Feedback.xml:18
+#, no-c-format
+msgid "Red Hat Knowledgebase"
+msgstr ""
+
+#. Tag: para
+#: Feedback.xml:20
+#, no-c-format
+msgid ""
+"Visit the Red Hat Knowledgebase at <ulink url=\"http://kbase.redhat.com\"></"
+"ulink> to search or browse through technical support articles about Red Hat "
+"products."
+msgstr ""
+
+#. Tag: term
+#: Feedback.xml:26
+#, no-c-format
+msgid "Red Hat Global Support Services"
+msgstr ""
+
+#. Tag: para
+#: Feedback.xml:28
+#, no-c-format
+msgid ""
+"Your Red Hat subscription entitles you to support from Red Hat Global "
+"Support Services (GSS). Visit <ulink url=\"http://support.redhat.com\"></"
+"ulink> for more information about obtaining help from GSS."
+msgstr ""
+
+#. Tag: term
+#: Feedback.xml:34
+#, no-c-format
+msgid "Other Red Hat documentation"
+msgstr ""
+
+#. Tag: para
+#: Feedback.xml:36
+#, no-c-format
+msgid ""
+"Access other Red Hat documentation at <ulink url=\"http://www.redhat.com/docs"
+"\"></ulink>"
+msgstr ""
+
+#. Tag: term
+#: Feedback.xml:42
+#, no-c-format
+msgid "Red Hat electronic mailing lists"
+msgstr ""
+
+#. Tag: para
+#: Feedback.xml:44
+#, no-c-format
+msgid ""
+"Red Hat hosts a large number of electronic mailing lists for discussion of "
+"Red Hat software and technology. You can find a list of publicly available "
+"lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\"></ulink>. "
+"Click on the name of any list to subscribe to that list or to access the "
+"list archives."
+msgstr ""
+
+#. Tag: title
+#: Feedback.xml:53
+#, no-c-format
 msgid "We Need Feedback!"
 msgstr "ਸਾਨੂੰ ਫੀਡਬੈਕ ਦੀ ਲੋੜ ਹੈ!"
 
-#: Feedback.xml:8(primary)
+#. Tag: primary
+#: Feedback.xml:55
+#, no-c-format
 msgid "feedback"
 msgstr "ਫੀਡਬੈਕ"
 
-#: Feedback.xml:9(secondary)
+#. Tag: secondary
+#: Feedback.xml:56
+#, no-c-format
 msgid "contact information for this manual"
 msgstr "ਇਸ ਦਸਤਾਵੇਜ਼ ਲਈ ਸੰਪਰਕ ਜਾਣਕਾਰੀ"
 
-#: Feedback.xml:11(para)
+#. Tag: para
+#: Feedback.xml:58
+#, no-c-format
 msgid ""
 "If you find a typographical error in this manual, or if you have thought of "
 "a way to make this manual better, we would love to hear from you! Please "
-"submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product "
+"submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/"
+"\">http://bugzilla.redhat.com/</ulink> against the product "
 "<application>&PRODUCT;.</application>"
 msgstr ""
-"ਜੇ ਤੁਸੀਂ ਇਸ ਦਸਤਾਵੇਜ਼ ਵਿੱਚ ਟਾਈਪੋਗਰਾਫੀਕਲ ਗਲਤੀ ਵੇਖੀ ਹੈ, ਜਾਂ ਜੇ ਤੁਸੀਂ ਇਸ ਦਸਤਾਵੇਜ਼ ਨੂੰ ਵਧੀਆਂ ਬਣਾ ਸਕਦੇ ਹੋ, ਤਾਂ ਅਸੀਂ ਤੁਹਾਡੇ ਯੋਗਦਾਨ ਦੀ ਕਦਰ ਕਰਦੇ ਹਾਂ! ਕਿਰਪਾ ਕਰਕੇ ਬੱਗਜ਼ੀਲਾ ਵਿੱਚ ਰਿਪੋਰਟ ਪੇਸ਼ ਕਰੋ: <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink> against the product "
-"<application>&PRODUCT;.</application>"
+"ਜੇ ਤੁਸੀਂ ਇਸ ਦਸਤਾਵੇਜ਼ ਵਿੱਚ ਟਾਈਪੋਗਰਾਫੀਕਲ ਗਲਤੀ ਵੇਖੀ ਹੈ, ਜਾਂ ਜੇ ਤੁਸੀਂ ਇਸ ਦਸਤਾਵੇਜ਼ ਨੂੰ ਵਧੀਆਂ ਬਣਾ "
+"ਸਕਦੇ ਹੋ, ਤਾਂ ਅਸੀਂ ਤੁਹਾਡੇ ਯੋਗਦਾਨ ਦੀ ਕਦਰ ਕਰਦੇ ਹਾਂ! ਕਿਰਪਾ ਕਰਕੇ ਬੱਗਜ਼ੀਲਾ ਵਿੱਚ ਰਿਪੋਰਟ ਪੇਸ਼ ਕਰੋ: "
+"<ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</"
+"ulink> against the product <application>&PRODUCT;.</application>"
 
-#: Feedback.xml:16(para)
+#. Tag: para
+#: Feedback.xml:61
+#, fuzzy, no-c-format
 msgid ""
-"When submitting a bug report, be sure to mention the manual's identifier: "
-"<citetitle>&BOOKID;</citetitle>"
+"When submitting a bug report, be sure to mention the manual&#39;s "
+"identifier: <citetitle>&BOOKID;</citetitle>"
 msgstr ""
-"ਬੱਗ ਰਿਪੋਰਟ ਪੇਸ਼ ਕਰਨ ਸਮੇਂ, ਦਸਤਾਵੇਜ਼ ਦੇ ਪਛਾਣਕਾਰ ਦਾ ਵੇਰਵਾ ਦਿਓ: "
-"<citetitle>&BOOKID;</citetitle>"
+"ਬੱਗ ਰਿਪੋਰਟ ਪੇਸ਼ ਕਰਨ ਸਮੇਂ, ਦਸਤਾਵੇਜ਼ ਦੇ ਪਛਾਣਕਾਰ ਦਾ ਵੇਰਵਾ ਦਿਓ: <citetitle>&BOOKID;</"
+"citetitle>"
 
-#: Feedback.xml:20(para)
+#. Tag: para
+#: Feedback.xml:64
+#, no-c-format
 msgid ""
 "If you have a suggestion for improving the documentation, try to be as "
 "specific as possible when describing it. If you have found an error, please "
 "include the section number and some of the surrounding text so we can find "
 "it easily."
-msgstr "ਜੇ ਤੁਸੀਂ ਦਸਤਾਵੇਜ਼ੀ ਵਿੱਚ ਸੋਧ ਬਾਰੇ ਸੁਝਾਅ ਹਨ, ਤਾਂ ਵਿਸ਼ੇਸ਼ ਸੁਝਾਅ ਹੀ ਦਿਓ। ਜੇ ਤੁਸੀਂ ਕੋਈ ਗਲਤੀ ਵੇਖੀ ਹੈ, ਤਾਂ ਕਿਰਪਾ ਕਰਕੇ ਸ਼ੈਕਸ਼ਨ ਨੰਬਰ ਅਤੇ ਕੁਝ ਪਾਠ ਸ਼ਾਮਿਲ ਕਰੋ ਤਾਂ ਕਿ ਅਸੀਂ ਇਸ ਨੂੰ ਅਸਾਨੀ ਨਾਲ ਲੱਭ ਸਕੀਏ।"
+msgstr ""
+"ਜੇ ਤੁਸੀਂ ਦਸਤਾਵੇਜ਼ੀ ਵਿੱਚ ਸੋਧ ਬਾਰੇ ਸੁਝਾਅ ਹਨ, ਤਾਂ ਵਿਸ਼ੇਸ਼ ਸੁਝਾਅ ਹੀ ਦਿਓ। ਜੇ ਤੁਸੀਂ ਕੋਈ ਗਲਤੀ ਵੇਖੀ ਹੈ, "
+"ਤਾਂ ਕਿਰਪਾ ਕਰਕੇ ਸ਼ੈਕਸ਼ਨ ਨੰਬਰ ਅਤੇ ਕੁਝ ਪਾਠ ਸ਼ਾਮਿਲ ਕਰੋ ਤਾਂ ਕਿ ਅਸੀਂ ਇਸ ਨੂੰ ਅਸਾਨੀ ਨਾਲ ਲੱਭ ਸਕੀਏ।"
 
-#. Put one translator per line, in the form of NAME <EMAIL>, YEAR1, YEAR2.
-#: Feedback.xml:0(None)
-msgid "translator-credits"
-msgstr "ਜਸਵਿੰਦਰ ਸਿੰਘ <jsingh@redhat.com>"
-
+#~ msgid "translator-credits"
+#~ msgstr "ਜਸਵਿੰਦਰ ਸਿੰਘ <jsingh@redhat.com>"
