--- a/publican-redhat/as-IN/Feedback.po
+++ b/publican-redhat/as-IN/Feedback.po
@@ -1,41 +1,42 @@
 # translation of Feedback.po to Assamese
 # Amitakhya Phukan <aphukan@fedoraproject.org>, 2007.
+# Amitakhya Phukan <aphukan@redhat.com>, 2010.
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2010-02-26 01:23+0000\n"
-"PO-Revision-Date: 2007-10-30 17:35+0530\n"
-"Last-Translator: Amitakhya Phukan <aphukan@fedoraproject.org>\n"
-"Language-Team: Assamese\n"
+"PO-Revision-Date: 2010-03-02 12:07+0530\n"
+"Last-Translator: Amitakhya Phukan <aphukan@redhat.com>\n"
+"Language-Team: Assamese <>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.4\n"
+"X-Generator: Lokalize 1.0\n"
 "Plural-Forms: nplurals=2; plural=(n!=1)\n"
 
 #. Tag: title
 #, no-c-format
 msgid "Getting Help and Giving Feedback"
-msgstr ""
+msgstr "সহায় পোৱা আৰু মতামত দিয়া"
 
 #. Tag: title
 #: Feedback.xml:8
 #, no-c-format
 msgid "Do You Need Help?"
-msgstr ""
+msgstr "আপোনাক সহায় লাগে নেকি ?"
 
 #. Tag: primary
 #: Feedback.xml:10
 #, no-c-format
 msgid "help"
-msgstr ""
+msgstr "সহায়"
 
 #. Tag: secondary
 #: Feedback.xml:11
 #, no-c-format
 msgid "getting help"
-msgstr ""
+msgstr "সহায় পোৱা"
 
 #. Tag: para
 #: Feedback.xml:13
@@ -43,13 +44,13 @@ msgstr ""
 msgid ""
 "If you experience difficulty with a procedure described in this "
 "documentation, you can find help in the following ways:"
-msgstr ""
+msgstr "এই আলেখ্যনত দিয়া পদক্ষেপবোৰত কোনো অসুবিধা পালে, আপুনি এই ধৰণেৰে সহায় পাব পাৰে:"
 
 #. Tag: term
 #: Feedback.xml:18
 #, no-c-format
 msgid "Red Hat Knowledgebase"
-msgstr ""
+msgstr "Red Hat Knowledgebase"
 
 #. Tag: para
 #: Feedback.xml:20
@@ -59,12 +60,14 @@ msgid ""
 "ulink> to search or browse through technical support articles about Red Hat "
 "products."
 msgstr ""
+"Red Hat ৰ উৎপাদনসমূহৰ বিষয়ে প্ৰযুক্তিগত সমৰ্থন বিচাৰিবলৈ বা চৰণ কৰিবলৈ <ulink "
+"url=\"http://kbase.redhat.com\"></ulink> ত Red Hat Knowledgebase চাওক ।"
 
 #. Tag: term
 #: Feedback.xml:26
 #, no-c-format
 msgid "Red Hat Global Support Services"
-msgstr ""
+msgstr "Red Hat Global Support Services"
 
 #. Tag: para
 #: Feedback.xml:28
@@ -74,12 +77,15 @@ msgid ""
 "Support Services (GSS). Visit <ulink url=\"http://support.redhat.com\"></"
 "ulink> for more information about obtaining help from GSS."
 msgstr ""
+"আপোনাৰ Red Hat ৰ বৰঙনিয়ে আপোনাক Red Hat Global Support Services (GSS) ৰ সমৰ্থন পাবলৈ "
+"সক্ষম কৰে । GSS ৰ পৰা সহায় পোৱাৰ অধিক তথ্যৰ বাবে <ulink url=\"http://support.redhat."
+"com\"></ulink> চাওক ।"
 
 #. Tag: term
 #: Feedback.xml:34
 #, no-c-format
 msgid "Other Red Hat documentation"
-msgstr ""
+msgstr "অন্য Red Hat আলেখ্যনসমূহ"
 
 #. Tag: para
 #: Feedback.xml:36
@@ -88,12 +94,13 @@ msgid ""
 "Access other Red Hat documentation at <ulink url=\"http://www.redhat.com/docs"
 "\"></ulink>"
 msgstr ""
+"<ulink url=\"http://www.redhat.com/docs\"></ulink> ত Red Hat ৰ অন্য আলেখ্যনসমূহ পাওক"
 
 #. Tag: term
 #: Feedback.xml:42
 #, no-c-format
 msgid "Red Hat electronic mailing lists"
-msgstr ""
+msgstr "Red Hat ইলেক্ট্ৰনিক পত্ৰপ্ৰেৰণ তালিকাসমূহ"
 
 #. Tag: para
 #: Feedback.xml:44
@@ -105,6 +112,10 @@ msgid ""
 "Click on the name of any list to subscribe to that list or to access the "
 "list archives."
 msgstr ""
+"Red Hat চালনাজ্ঞান আৰু প্ৰযুক্তিবিদ্যাৰ আলোচনাৰ বাবে Red Hat ত বহুতো ইলেক্ট্ৰনিক "
+"পত্ৰপ্ৰেৰণ তালিকা আছে । গনসাধাৰণৰ কাৰণে উপলব্ধ তালিকাসমূহ আপুনি <ulink "
+"url=\"https://www.redhat.com/mailman/listinfo\"></ulink> ত পাব পাৰে । যিকোনো তালিকালৈ "
+"বৰঙনি দিবলৈ বা তাৰ চিৰস্তা অভিগম কৰিবলৈ তাত ক্লিক কৰক ।"
 
 #. Tag: title
 #: Feedback.xml:53
@@ -135,19 +146,19 @@ msgid ""
 "<application>&PRODUCT;.</application>"
 msgstr ""
 "এই হাতপুথিত আপুনি অক্ষৰমূদ্ৰণৰ ভুল পালে, বা এই হাতপুথি আৰু উন্নত কৰিবৰ বাবে কোনো দিশ "
-"পালে, আমি আপোনাৰ মতামত পাবলৈ ভাল পাম! Bugzilla ত এটা বৰ্ণনা নথিভূক্ত কৰক: "
-"<ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</"
-"ulink>  <application>&PRODUCT;</application> ৰ বিৰুদ্ধে ।"
+"পালে, আমি আপোনাৰ মতামত পাবলৈ ভাল পাম! Bugzilla ত এটা বৰ্ণনা নথিভূক্ত কৰক: <ulink "
+"url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink>  <application>"
+"&PRODUCT;</application> ৰ বিৰুদ্ধে ।"
 
 #. Tag: para
 #: Feedback.xml:61
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "When submitting a bug report, be sure to mention the manual&#39;s "
 "identifier: <citetitle>&BOOKID;</citetitle>"
 msgstr ""
-"বাগৰ প্ৰতিবেদন দিওঁতে, হাতপুথিৰ চিনাক্তকাৰীক উল্লেখ কৰিবলৈ মনত ৰাখিব: "
-"<citetitle>&BOOKID;</citetitle>"
+"বাগৰ প্ৰতিবেদন দিওঁতে, হাতপুথি&#39;ৰ চিনাক্তকাৰীক উল্লেখ কৰিবলৈ মনত ৰাখিব: <citetitle>"
+"&BOOKID;</citetitle>"
 
 #. Tag: para
 #: Feedback.xml:64
