--- a/publican-redhat/kn-IN/Feedback.po
+++ b/publican-redhat/kn-IN/Feedback.po
@@ -1,41 +1,41 @@
 # translation of Feedback.po to Kannada
-# Shankar Prasad <svenkate@redhat.com>, 2007.
+# Shankar Prasad <svenkate@redhat.com>, 2007, 2010.
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2010-02-26 01:23+0000\n"
-"PO-Revision-Date: 2007-10-30 17:06+0530\n"
+"PO-Revision-Date: 2010-03-02 13:01+0530\n"
 "Last-Translator: Shankar Prasad <svenkate@redhat.com>\n"
-"Language-Team: Kannada <en@li.org>\n"
+"Language-Team: kn-IN <>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.4\n"
+"X-Generator: Lokalize 1.0\n"
 "Plural-Forms:  nplurals=2; plural=(n != 1);\n"
 
 #. Tag: title
 #, no-c-format
 msgid "Getting Help and Giving Feedback"
-msgstr ""
+msgstr "ನೆರವನ್ನು ಪಡೆಯುವಿಕೆ ಹಾಗು ಅಭಿಪ್ರಾಯವನ್ನು ತಿಳಿಸುವಿಕೆ"
 
 #. Tag: title
 #: Feedback.xml:8
 #, no-c-format
 msgid "Do You Need Help?"
-msgstr ""
+msgstr "ನಿಮಗೆ ನೆರವು ಬೇಕಿದೆಯೆ?"
 
 #. Tag: primary
 #: Feedback.xml:10
 #, no-c-format
 msgid "help"
-msgstr ""
+msgstr "ನೆರವು"
 
 #. Tag: secondary
 #: Feedback.xml:11
 #, no-c-format
 msgid "getting help"
-msgstr ""
+msgstr "ನೆರವನ್ನು ಪಡೆಯುವಿಕೆ"
 
 #. Tag: para
 #: Feedback.xml:13
@@ -44,12 +44,14 @@ msgid ""
 "If you experience difficulty with a procedure described in this "
 "documentation, you can find help in the following ways:"
 msgstr ""
+"ಈ ದಸ್ತಾವೇಜಿನಲ್ಲಿ ವಿವರಿಸಲಾದ ವಿಧಾನವನ್ನು ಅನುಸರಿಸಲು ನಿಮಗೆ ತೊಂದರೆ ಕಷ್ಟವೆನಿಸಿದರೆ, ಈ "
+"ಕೆಳಗಿನ ವಿಧಾನದಲ್ಲಿ ನೀವು ನೆರವನ್ನು ಪಡೆದುಕೊಳ್ಳಬಹುದು:"
 
 #. Tag: term
 #: Feedback.xml:18
 #, no-c-format
 msgid "Red Hat Knowledgebase"
-msgstr ""
+msgstr "Red Hat ಜ್ಞಾನ ಕೇಂದ್ರ"
 
 #. Tag: para
 #: Feedback.xml:20
@@ -59,12 +61,15 @@ msgid ""
 "ulink> to search or browse through technical support articles about Red Hat "
 "products."
 msgstr ""
+"Red Hat ಉತ್ಪನ್ನಗಳ ತಾಂತ್ರಿಕ ಬೆಂಬಲದ ಬಗೆಗಿನ ಲೇಖನಗಳನ್ನು ಹುಡುಕಲು ಹಾಗು ನೋಡಲು <ulink "
+"url=\"http://kbase.redhat.com\"></ulink> ಎಂಬಲ್ಲಿರುವ Red Hat ಜ್ಞಾನ ಕೇಂದ್ರಕ್ಕೆ "
+"ಭೇಟಿಕೊಡಿ."
 
 #. Tag: term
 #: Feedback.xml:26
 #, no-c-format
 msgid "Red Hat Global Support Services"
-msgstr ""
+msgstr "Red Hat ಗ್ಲೋಬಲ್ ಸಪೋರ್ಟ್ ಸರ್ವಿಸಸ್"
 
 #. Tag: para
 #: Feedback.xml:28
@@ -74,12 +79,16 @@ msgid ""
 "Support Services (GSS). Visit <ulink url=\"http://support.redhat.com\"></"
 "ulink> for more information about obtaining help from GSS."
 msgstr ""
+"ನಿಮ್ಮ Red Hat ಚಂದಾದಾರಿಕೆಯಿಂದಾಗಿ ನೀವು Red Hat ಗ್ಲೋಬಲ್ ಸಪೋರ್ಟ್ ಸರ್ವಿಸಸ್ (GSS) ಅನ್ನು "
+"ಪಡೆಯಲು ಅರ್ಹರಾಗಿರುತ್ತೀರಿ. GSS ಇಂದ ನೆರವನ್ನು ಪಡೆಯುವ ಬಗೆಗಿನ ಹೆಚ್ಚಿನ ಮಾಹಿತಿಗಾಗಿ <ulink "
+"url=\"http://support.redhat.com\"></"
+"ulink> ಅನ್ನು ನೋಡಿ."
 
 #. Tag: term
 #: Feedback.xml:34
 #, no-c-format
 msgid "Other Red Hat documentation"
-msgstr ""
+msgstr "ಇತರೆ Red Hat ದಸ್ತಾವೇಜು"
 
 #. Tag: para
 #: Feedback.xml:36
@@ -88,12 +97,14 @@ msgid ""
 "Access other Red Hat documentation at <ulink url=\"http://www.redhat.com/docs"
 "\"></ulink>"
 msgstr ""
+"Red Hat ನ ಇತರೆ ದಸ್ತಾವೇಜುಗಳನ್ನು <ulink url=\"http://www.redhat.com/docs"
+"\"></ulink> ಎಂಬಲ್ಲಿ ನೋಡಿ"
 
 #. Tag: term
 #: Feedback.xml:42
 #, no-c-format
 msgid "Red Hat electronic mailing lists"
-msgstr ""
+msgstr "Red Hat ವಿದ್ಯುನ್ಮಾನ ಮೈಲಿಂಗ್ ಲಿಸ್ಟುಗಳು"
 
 #. Tag: para
 #: Feedback.xml:44
@@ -105,12 +116,17 @@ msgid ""
 "Click on the name of any list to subscribe to that list or to access the "
 "list archives."
 msgstr ""
+"Red Hat ತಂತ್ರಾಂಶ ಹಾಗು ತಂತ್ರಜ್ಞಾನದ ಬಗೆಗಿನ ಚರ್ಚೆಗಾಗಿ Red Hat ದೊಡ್ಡ ಸಂಖ್ಯೆಯಲ್ಲಿ "
+"ವಿದ್ಯುನ್ಮಾನ(ಇಲೆಕ್ಟ್ರಾನಿಕ್) ಮೈಲಿಂಗ್ ಲಿಸ್ಟುಗಳನ್ನು ಹೊಂದಿರುತ್ತದೆ. ಸಾರ್ವಜನಿಕವಾಗಿ "
+"ಲಭ್ಯವಿರುವ ಲಿಸ್ಟುಗಳನ್ನು ನೀವು <ulink url=\"https://www.redhat.com/mailman/listinfo\">"
+"</ulink> ಎಂಬಲ್ಲಿ ನೋಡಬಹುದಾಗಿದೆ. ಯಾವುದೆ ಲಿಸ್ಟಿಗೆ ಚಂದಾದಾರರಾಗಲು ಅಥವ ಲಿಸ್ಟಿನ "
+"ಆರ್ಕೈವುಗಳನ್ನು ನೋಡಲು ಆ ಲಿಸ್ಟಿನ ಮೇಲೆ ಕ್ಲಿಕ್ ಮಾಡಿ."
 
 #. Tag: title
 #: Feedback.xml:53
 #, no-c-format
 msgid "We Need Feedback!"
-msgstr "ನಮಗೆ ನಿಮ್ಮ ಫೀಡ್-ಬ್ಯಾಕಿನ ಬೇಕಿದೆ!"
+msgstr "ನಮಗೆ ನಿಮ್ಮ ಅಭಿಪ್ರಾಯದ ಅಗತ್ಯವಿದೆ!"
 
 #. Tag: primary
 #: Feedback.xml:55
@@ -142,12 +158,12 @@ msgstr ""
 
 #. Tag: para
 #: Feedback.xml:61
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "When submitting a bug report, be sure to mention the manual&#39;s "
 "identifier: <citetitle>&BOOKID;</citetitle>"
 msgstr ""
-"ಒಂದು ದೋಷ ವರದಿಯನ್ನು ಸಲ್ಲಿಸುವಾಗ, ಕೈಪಿಡಿಯ ಈ ಕೆಳಗಿನ ಐಡೆಂಟಿಫಯರನ್ನು ನಮೂದಿಸುವುದನ್ನು "
+"ಒಂದು ದೋಷ ವರದಿಯನ್ನು ಸಲ್ಲಿಸುವಾಗ, ಕೈಪಿಡಿಯ &#39;s ಐಡೆಂಟಿಫಯರನ್ನು ನಮೂದಿಸುವುದನ್ನು "
 "ಮರೆಯಬೇಡಿ: <citetitle>&BOOKID;</citetitle>"
 
 #. Tag: para
