--- a/publican-redhat/ru-RU/Feedback.po
+++ b/publican-redhat/ru-RU/Feedback.po
@@ -1,41 +1,44 @@
+# translation of Feedback.po to Russian
 # Russian Translation.
-# Alexey Vasyukov <vasyukov@vdel.com>, 2009.
 #
+# Alexey Vasyukov <vasyukov@vdel.com>, 2009.
+# Yulia <ypoyarko@redhat.com>, 2010.
 msgid ""
 msgstr ""
-"Project-Id-Version: 1.0\n"
+"Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2010-02-26 01:23+0000\n"
-"PO-Revision-Date: 2009-03-09 18:42+0300\n"
-"Last-Translator: Alexey Vasyukov <vasyukov@gmail.com>\n"
-"Language-Team: Russian Fedora Team <fedora-localization@www.russianfedora."
-"ru>\n"
+"PO-Revision-Date: 2010-03-01 16:05+1100\n"
+"Last-Translator: Yulia <ypoyarko@redhat.com>\n"
+"Language-Team: Russian\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 1.11.4\n"
+"Plural-Forms:  nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 #. Tag: title
 #, no-c-format
 msgid "Getting Help and Giving Feedback"
-msgstr ""
+msgstr "Получение помощи и обратная связь"
 
 #. Tag: title
 #: Feedback.xml:8
 #, no-c-format
 msgid "Do You Need Help?"
-msgstr ""
+msgstr "Нужна помощь?"
 
 #. Tag: primary
 #: Feedback.xml:10
 #, no-c-format
 msgid "help"
-msgstr ""
+msgstr "помощь"
 
 #. Tag: secondary
 #: Feedback.xml:11
 #, no-c-format
 msgid "getting help"
-msgstr ""
+msgstr "получение помощи"
 
 #. Tag: para
 #: Feedback.xml:13
@@ -43,13 +46,13 @@ msgstr ""
 msgid ""
 "If you experience difficulty with a procedure described in this "
 "documentation, you can find help in the following ways:"
-msgstr ""
+msgstr "Если вы столкнулись с проблемами при выполнении действий, описанных в этом документе, помощь можно получить следующим образом:"
 
 #. Tag: term
 #: Feedback.xml:18
 #, no-c-format
 msgid "Red Hat Knowledgebase"
-msgstr ""
+msgstr "База знаний Red Hat"
 
 #. Tag: para
 #: Feedback.xml:20
@@ -59,12 +62,14 @@ msgid ""
 "ulink> to search or browse through technical support articles about Red Hat "
 "products."
 msgstr ""
+"В базе знаний Red Hat по адресу <ulink url=\"http://kbase.redhat.com\"></"
+"ulink> можно получить информацию и найти технические статьи о продуктах Red Hat."
 
 #. Tag: term
 #: Feedback.xml:26
 #, no-c-format
 msgid "Red Hat Global Support Services"
-msgstr ""
+msgstr "Глобальная служба поддержки Red Hat"
 
 #. Tag: para
 #: Feedback.xml:28
@@ -74,12 +79,14 @@ msgid ""
 "Support Services (GSS). Visit <ulink url=\"http://support.redhat.com\"></"
 "ulink> for more information about obtaining help from GSS."
 msgstr ""
+"Наличие подписки Red Hat гарантирует получение помощи от глобальной службы поддержки Red Hat. Подробную информацию можно найти на сайте <ulink url=\"http://support.redhat.com\"></"
+"ulink>."
 
 #. Tag: term
 #: Feedback.xml:34
 #, no-c-format
 msgid "Other Red Hat documentation"
-msgstr ""
+msgstr "Другая документация Red Hat"
 
 #. Tag: para
 #: Feedback.xml:36
@@ -88,12 +95,14 @@ msgid ""
 "Access other Red Hat documentation at <ulink url=\"http://www.redhat.com/docs"
 "\"></ulink>"
 msgstr ""
+"Документацию Red Hat можно найти по адресу <ulink url=\"http://www.redhat.com/docs"
+"\"></ulink>."
 
 #. Tag: term
 #: Feedback.xml:42
 #, no-c-format
 msgid "Red Hat electronic mailing lists"
-msgstr ""
+msgstr "Списки рассылок Red Hat"
 
 #. Tag: para
 #: Feedback.xml:44
@@ -104,13 +113,13 @@ msgid ""
 "lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\"></ulink>. "
 "Click on the name of any list to subscribe to that list or to access the "
 "list archives."
-msgstr ""
+msgstr "Существует множество почтовых рассылок Red Hat на разные темы, включая программное обеспечение и обсуждение технологий. Полный список можно найти по адресу <ulink url=\"https://www.redhat.com/mailman/listinfo\"></ulink>. Чтобы просмотреть информацию об интересующей рассылке и подписаться, нажмите на ее названии."
 
 #. Tag: title
 #: Feedback.xml:53
 #, no-c-format
 msgid "We Need Feedback!"
-msgstr "Нам нужны Ваши отзывы!"
+msgstr "Нам нужны ваши отзывы!"
 
 #. Tag: primary
 #: Feedback.xml:55
@@ -122,7 +131,7 @@ msgstr "обратная связь"
 #: Feedback.xml:56
 #, no-c-format
 msgid "contact information for this manual"
-msgstr "контактная информация по этому руководству"
+msgstr "контактная информация для этого руководства"
 
 #. Tag: para
 #: Feedback.xml:58
@@ -134,20 +143,19 @@ msgid ""
 "\">http://bugzilla.redhat.com/</ulink> against the product "
 "<application>&PRODUCT;.</application>"
 msgstr ""
-"Если Вы нашли опечатку в этом руководстве, или у Вас есть идеи, как его "
-"улучшить, мы будем рады выслушать Вас! Пожалуйста, оставьте сообщение в "
+"Если вы нашли опечатку в этом руководстве или у вас есть предложения по его усовершенствованию, мы будем рады вас выслушать. Пожалуйста, создайте запрос в   "
 "Bugzilla по адресу <ulink url=\"http://bugzilla.redhat.com/\">http://"
-"bugzilla.redhat.com/</ulink>, выбрав продукт <application>&PRODUCT;.</"
+"bugzilla.redhat.com/</ulink>, выбрав компонент <application>&PRODUCT;.</"
 "application>"
 
 #. Tag: para
 #: Feedback.xml:61
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "When submitting a bug report, be sure to mention the manual&#39;s "
 "identifier: <citetitle>&BOOKID;</citetitle>"
 msgstr ""
-"Убедитесь, что в сообщении об ошибке Вы указали идентификатор данного "
+"Не забудьте указать в запросе идентификатор данного "
 "руководства: <citetitle>&BOOKID;</citetitle>."
 
 #. Tag: para
@@ -159,6 +167,7 @@ msgid ""
 "include the section number and some of the surrounding text so we can find "
 "it easily."
 msgstr ""
-"Если Вы хотите предложить улучшения руководства, постарайтесь описать "
-"предложения максимально подробно. Если Вы нашли ошибку, пожалуйста, укажите "
-"номер раздела и текст вокруг, чтобы мы могли её быстро найти."
+"Если у вас есть предложения по улучшению этого руководства, постарайтесь описать "
+"их как можно подробнее. Если же вы нашли ошибку, пожалуйста, укажите "
+"номер раздела и окружающий текст, чтобы мы могли быстро ее найти."
+
