--- a/publican-redhat/te-IN/Feedback.po
+++ b/publican-redhat/te-IN/Feedback.po
@@ -1,40 +1,41 @@
 # translation of Feedback.po to Telugu
-# Krishna Babu K <kkrothap@redhat.com>, 2007.
+# Krishna Babu K <kkrothap@redhat.com>, 2007, 2010.
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2010-02-26 01:23+0000\n"
-"PO-Revision-Date: 2007-10-29 17:40+0530\n"
+"PO-Revision-Date: 2010-03-02 14:16+0530\n"
 "Last-Translator: Krishna Babu K <kkrothap@redhat.com>\n"
 "Language-Team: Telugu <en@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
+"Plural-Forms: nplurals=2; plural=(n!=1);\n\n"
 
 #. Tag: title
 #, no-c-format
 msgid "Getting Help and Giving Feedback"
-msgstr ""
+msgstr "సహాయాన్ని పొందుట మరియు ప్రతిస్పందనను తెలుపుట"
 
 #. Tag: title
 #: Feedback.xml:8
 #, no-c-format
 msgid "Do You Need Help?"
-msgstr ""
+msgstr "మీకు సహాయం కావలెనా?"
 
 #. Tag: primary
 #: Feedback.xml:10
 #, no-c-format
 msgid "help"
-msgstr ""
+msgstr "సహాయం"
 
 #. Tag: secondary
 #: Feedback.xml:11
 #, no-c-format
 msgid "getting help"
-msgstr ""
+msgstr "సహాయం పొందుట"
 
 #. Tag: para
 #: Feedback.xml:13
@@ -43,12 +44,14 @@ msgid ""
 "If you experience difficulty with a procedure described in this "
 "documentation, you can find help in the following ways:"
 msgstr ""
+"ఈ పత్రికీకరణనందు వివరించిన విధానంతో మీరేమైనా సంక్లిష్టతకు గురైతే, ఈ కింది మార్గాలలో మీరు సహాయం "
+"కనుగొనగలరు:"
 
 #. Tag: term
 #: Feedback.xml:18
 #, no-c-format
 msgid "Red Hat Knowledgebase"
-msgstr ""
+msgstr "Red Hat విజ్ఞతాధారం(నాలెడ్జ్‍బేస్)"
 
 #. Tag: para
 #: Feedback.xml:20
@@ -58,12 +61,14 @@ msgid ""
 "ulink> to search or browse through technical support articles about Red Hat "
 "products."
 msgstr ""
+"Red Hat వుత్పత్తుల గురించి సాంకేతిక మద్దతు వ్యాసాలను శోధించుటకు లేదా అన్వేషించుటకు <ulink url=\"http://kbase.redhat.com\"></ulink> యిచట Red Hat విజ్ఞతాధారం(నాలెడ్జ్‍బేస్)ను "
+"దర్శించండి."
 
 #. Tag: term
 #: Feedback.xml:26
 #, no-c-format
 msgid "Red Hat Global Support Services"
-msgstr ""
+msgstr "Red Hat గ్లోబల్ సపోర్ట్ సర్వీసెస్"
 
 #. Tag: para
 #: Feedback.xml:28
@@ -73,12 +78,14 @@ msgid ""
 "Support Services (GSS). Visit <ulink url=\"http://support.redhat.com\"></"
 "ulink> for more information about obtaining help from GSS."
 msgstr ""
+"మీ Red Hat చందా(సబ్‌స్క్రిప్షన్) మీకు Red Hat గ్లోబల్ సపోర్ట్ సర్వీసెస్ (GSS) నుండి మద్దతునుకూడా "
+"అందించును. GSS నుండి సహాయం పొందుటపై మరింత సమాచారము కొరకు <ulink url=\"http://support.redhat.com\"></ulink> చూడుము."
 
 #. Tag: term
 #: Feedback.xml:34
 #, no-c-format
 msgid "Other Red Hat documentation"
-msgstr ""
+msgstr "ఇతర Red Hat పత్రికీకరణ"
 
 #. Tag: para
 #: Feedback.xml:36
@@ -86,13 +93,13 @@ msgstr ""
 msgid ""
 "Access other Red Hat documentation at <ulink url=\"http://www.redhat.com/docs"
 "\"></ulink>"
-msgstr ""
+msgstr "ఇతర Red Hat పత్రికీకరణను <ulink url=\"http://www.redhat.com/docs\"></ulink> వద్ద యాక్సెస్ చేయుము."
 
 #. Tag: term
 #: Feedback.xml:42
 #, no-c-format
 msgid "Red Hat electronic mailing lists"
-msgstr ""
+msgstr "Red Hat యెలక్ట్రోనిక్ మెయిలింగ్ లిస్ట్స్"
 
 #. Tag: para
 #: Feedback.xml:44
@@ -104,6 +111,8 @@ msgid ""
 "Click on the name of any list to subscribe to that list or to access the "
 "list archives."
 msgstr ""
+"Red Hat సాఫ్టువేర్ మరియు సంకేతికతను చర్చించుట కొరకై Red Hat యెక్కువ సంఖ్యలో యెలక్ట్రోనిక్ మెయిలింగ్ లిస్ట్స్ వుంచును. "
+"పబ్లిక్‌గా అందుబాటులో వున్న జాబితా(లిస్ట్)లను మీరు <ulink url=\"https://www.redhat.com/mailman/listinfo\"></ulink> వద్ద కనుగొనగలరు. జాబితానందు జేరుటకు లేదా జాబితా యొక్క అర్చీవ్‌లను యాక్సెస్ చేయుటకు జాబితా యొక్క నామముపై నొక్కుము."
 
 #. Tag: title
 #: Feedback.xml:53
@@ -140,12 +149,12 @@ msgstr ""
 
 #. Tag: para
 #: Feedback.xml:61
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "When submitting a bug report, be sure to mention the manual&#39;s "
 "identifier: <citetitle>&BOOKID;</citetitle>"
 msgstr ""
-"బగ్ ను అప్పగించు నప్పుడు,ఖచ్చితంగా చేతిపుస్తకం గుర్తింపును తెలియపరుచుట మరువవద్దు: "
+"బగ్ నివేదికను అప్పగించునప్పుడు, ఖచ్చితంగా చేతిపుస్తకం గుర్తింపును తెలియపరుచుట మరువవద్దు: "
 "<citetitle>&BOOKID;</citetitle>"
 
 #. Tag: para
@@ -157,9 +166,6 @@ msgid ""
 "include the section number and some of the surrounding text so we can find "
 "it easily."
 msgstr ""
-"మీరు పత్రికీకరణ మెరుగుదల కొరకు సలహా కలిగిఉంటే,దానిని వివరించేటప్పుడు సాద్యమైనంత వరకు ప్రత్యేకంగా "
-"ప్రయత్నించండి.మీరు ఒక దోషాన్ని కనుగొన్నట్లైతే,దయచేసి విభాగం సంఖ్య మరియు దాని చుట్టూఉన్న టెక్స్టును "
+"మీరు పత్రికీకరణ మెరుగుదల కొరకు సలహా కలిగిఉంటే,దానిని వివరించేటప్పుడు సాద్యమైనంత వరకు యెంత వీలైతే అంత నిర్ధిష్టంగా వివరించుటకు ప్రయత్నించుము. మీరు ఒక దోషాన్ని కనుగొన్నట్లైతే,దయచేసి విభాగం సంఖ్య మరియు దాని చుట్టూవున్న టెక్స్టును "
 "కలపండి అప్పుడు మేము సులభంగా కనుగొనకలుగుతాము."
 
-#~ msgid "translator-credits"
-#~ msgstr "KrishnaBabu k <kkrothap@redhat.com> 2007"
