--- a/publican-redhat/es-ES/Feedback.po
+++ b/publican-redhat/es-ES/Feedback.po
@@ -1,13 +1,14 @@
-# translation of Feedback.po to Español
+# translation of Feedback.po to Spanish
 # Manuel Ospina <mospina@redhat.com>, 2007.
+# Gladys Guerrero  <gguerrer@redhat.com>, 2010.
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2010-02-26 01:23+0000\n"
-"PO-Revision-Date: 2007-10-23 14:10+1000\n"
-"Last-Translator: Manuel Ospina <mospina@redhat.com>\n"
-"Language-Team: Español <en@li.org>\n"
+"PO-Revision-Date: 2010-03-02 09:50+1000\n"
+"Last-Translator: Gladys Guerrero  <gguerrer@redhat.com>\n"
+"Language-Team: Spanish <es@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -16,25 +17,25 @@ msgstr ""
 #. Tag: title
 #, no-c-format
 msgid "Getting Help and Giving Feedback"
-msgstr ""
+msgstr "Cómo obtener ayuda y hacer sus comentarios"
 
 #. Tag: title
 #: Feedback.xml:8
 #, no-c-format
 msgid "Do You Need Help?"
-msgstr ""
+msgstr "¿Necesita ayuda?"
 
 #. Tag: primary
 #: Feedback.xml:10
 #, no-c-format
 msgid "help"
-msgstr ""
+msgstr "Ayuda"
 
 #. Tag: secondary
 #: Feedback.xml:11
 #, no-c-format
 msgid "getting help"
-msgstr ""
+msgstr "Cómo obtener ayuda"
 
 #. Tag: para
 #: Feedback.xml:13
@@ -42,13 +43,13 @@ msgstr ""
 msgid ""
 "If you experience difficulty with a procedure described in this "
 "documentation, you can find help in the following ways:"
-msgstr ""
+msgstr "Si encuentra dificultades con alguno de los procedimientos descritos en este documento, puede obtener ayuda de esta forma:"
 
 #. Tag: term
 #: Feedback.xml:18
 #, no-c-format
 msgid "Red Hat Knowledgebase"
-msgstr ""
+msgstr "Red Hat Knowledgebase"
 
 #. Tag: para
 #: Feedback.xml:20
@@ -58,12 +59,14 @@ msgid ""
 "ulink> to search or browse through technical support articles about Red Hat "
 "products."
 msgstr ""
+"Visite la base de datos de Red Hat en <ulink url=\"http://kbase.redhat.com\"></"
+"ulink> para buscar o navegar a través de los artículos de soporte técnico acerca de los productos de Red Hat."
 
 #. Tag: term
 #: Feedback.xml:26
 #, no-c-format
 msgid "Red Hat Global Support Services"
-msgstr ""
+msgstr "Red Hat Global Support Services (GSS)"
 
 #. Tag: para
 #: Feedback.xml:28
@@ -73,12 +76,15 @@ msgid ""
 "Support Services (GSS). Visit <ulink url=\"http://support.redhat.com\"></"
 "ulink> for more information about obtaining help from GSS."
 msgstr ""
+"Su suscripción de Red Hat le da derecho a la asistencia técnica de Red Hat Global "
+"Support Services (GSS). Visite <ulink url=\"http://support.redhat.com\"></"
+"ulink> para obtener mayor información sobre cómo obtener ayuda de GSS."
 
 #. Tag: term
 #: Feedback.xml:34
 #, no-c-format
 msgid "Other Red Hat documentation"
-msgstr ""
+msgstr "Otra documentación de Red Hat"
 
 #. Tag: para
 #: Feedback.xml:36
@@ -87,12 +93,14 @@ msgid ""
 "Access other Red Hat documentation at <ulink url=\"http://www.redhat.com/docs"
 "\"></ulink>"
 msgstr ""
+"Puede acceder a otros documentos de Red Hat en <ulink url=\"http://www.redhat.com/docs"
+"\"></ulink>"
 
 #. Tag: term
 #: Feedback.xml:42
 #, no-c-format
 msgid "Red Hat electronic mailing lists"
-msgstr ""
+msgstr "Listas de correo electrónico de Red Hat"
 
 #. Tag: para
 #: Feedback.xml:44
@@ -104,6 +112,8 @@ msgid ""
 "Click on the name of any list to subscribe to that list or to access the "
 "list archives."
 msgstr ""
+"Red Hat alberga una gran lista de correo electrónico para discutir sobre "
+"software y tecnología de Red Hat. Encontrará un listado de las listas de correo disponibles al público en <ulink url=\"https://www.redhat.com/mailman/listinfo\"></ulink>. Haga clic en el nombre de la lista a la que quiera suscribirse o para acceder a los archivos de listados."
 
 #. Tag: title
 #: Feedback.xml:53
@@ -115,13 +125,13 @@ msgstr "¡Necesitamos sus comentarios!"
 #: Feedback.xml:55
 #, no-c-format
 msgid "feedback"
-msgstr "comentarios"
+msgstr "Comentarios"
 
 #. Tag: secondary
 #: Feedback.xml:56
 #, no-c-format
 msgid "contact information for this manual"
-msgstr "información de contacto para este manual"
+msgstr "Información de contacto para este manual"
 
 #. Tag: para
 #: Feedback.xml:58
@@ -133,20 +143,19 @@ msgid ""
 "\">http://bugzilla.redhat.com/</ulink> against the product "
 "<application>&PRODUCT;.</application>"
 msgstr ""
-"Si encuentra un error tipográfico en este manual o si sabe de alguna manera "
-"de mejorarlo, nos gustaría escuchar sus sugerencias. Por favor complete un "
+"Si encuentra un error tipográfico en este manual o si ha pensado que hay alguna manera de mejorar este manual, nos gustaría escuchar sus sugerencias. Por favor complete un "
 "reporte en Bugzilla: <ulink url=\"http://bugzilla.redhat.com/\">http://"
-"bugzilla.redhat.com/</ulink> usando el producto <application>&PRODUCT;</"
+"bugzilla.redhat.com/</ulink> relacionando el producto <application>&PRODUCT;</"
 "application>."
 
 #. Tag: para
 #: Feedback.xml:61
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "When submitting a bug report, be sure to mention the manual&#39;s "
 "identifier: <citetitle>&BOOKID;</citetitle>"
 msgstr ""
-"Cuando envíe un reporte de error no olvide mencionar el identificador del "
+"Cuando envíe un reporte de error no olvide mencionar el identificador&#39 del "
 "manual: <citetitle>&BOOKID;</citetitle>"
 
 #. Tag: para
@@ -158,10 +167,7 @@ msgid ""
 "include the section number and some of the surrounding text so we can find "
 "it easily."
 msgstr ""
-"Si tiene una sugerencia para mejorar la documentación, intente ser tan "
-"específico como sea posible cuando describa su sugerencia. Si ha encontrado "
-"un error, por favor incluya el número de sección y parte del texto que rodea "
-"el error para que podamos encontrarlo más fácilmente."
+"Si tiene una sugerencia para mejorar la documentación, trate de ser tan "
+"específico como sea posible. Si ha encontrado "
+"un error, por favor incluya el número de sección y parte del texto que lo rodea para que podamos encontrarlo más fácilmente."
 
-#~ msgid "translator-credits"
-#~ msgstr "Manuel Ospina (mospina@redhat.com) 2007"
