--- a/publican-redhat/fr-FR/Feedback.po
+++ b/publican-redhat/fr-FR/Feedback.po
@@ -1,13 +1,14 @@
 # translation of Feedback.po to French
 # Decroux Fabien <fdecroux@redhat.com>, 2007.
+# Sam Friedmann <sam.friedmann@redhat.com>, 2010.
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2010-02-26 01:23+0000\n"
-"PO-Revision-Date: 2007-10-23 11:01+1000\n"
-"Last-Translator: Decroux Fabien <fdecroux@redhat.com>\n"
-"Language-Team: French <fr@li.org>\n"
+"PO-Revision-Date: 2010-03-02 11:45+1000\n"
+"Last-Translator: Sam Friedmann <sam.friedmann@redhat.com>\n"
+"Language-Team: French <French fedora-trans-fr@fedoraproject.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -16,25 +17,25 @@ msgstr ""
 #. Tag: title
 #, no-c-format
 msgid "Getting Help and Giving Feedback"
-msgstr ""
+msgstr "Obtenir de l'aide et faire des commentaires"
 
 #. Tag: title
 #: Feedback.xml:8
 #, no-c-format
 msgid "Do You Need Help?"
-msgstr ""
+msgstr "Avez-vous besoin d'aide ?"
 
 #. Tag: primary
 #: Feedback.xml:10
 #, no-c-format
 msgid "help"
-msgstr ""
+msgstr "aide"
 
 #. Tag: secondary
 #: Feedback.xml:11
 #, no-c-format
 msgid "getting help"
-msgstr ""
+msgstr "obtenir de l'aide"
 
 #. Tag: para
 #: Feedback.xml:13
@@ -42,13 +43,13 @@ msgstr ""
 msgid ""
 "If you experience difficulty with a procedure described in this "
 "documentation, you can find help in the following ways:"
-msgstr ""
+msgstr "Si vous rencontrez des difficultés avec l'une des procédures décrites dans cette documentation, vous pouvez obtenir de l'aide comme suit :"
 
 #. Tag: term
 #: Feedback.xml:18
 #, no-c-format
 msgid "Red Hat Knowledgebase"
-msgstr ""
+msgstr "Base de connaissances Red Hat"
 
 #. Tag: para
 #: Feedback.xml:20
@@ -57,13 +58,13 @@ msgid ""
 "Visit the Red Hat Knowledgebase at <ulink url=\"http://kbase.redhat.com\"></"
 "ulink> to search or browse through technical support articles about Red Hat "
 "products."
-msgstr ""
+msgstr "Visitez la base de connaissances Red Hat à <ulink url=\"http://kbase.redhat.com\"></ulink> pour chercher ou pour avoir un aperçu des articles sur le support technique des produits Red Hat."
 
 #. Tag: term
 #: Feedback.xml:26
 #, no-c-format
 msgid "Red Hat Global Support Services"
-msgstr ""
+msgstr "Service de support global Red Hat (GSS)"
 
 #. Tag: para
 #: Feedback.xml:28
@@ -72,13 +73,13 @@ msgid ""
 "Your Red Hat subscription entitles you to support from Red Hat Global "
 "Support Services (GSS). Visit <ulink url=\"http://support.redhat.com\"></"
 "ulink> for more information about obtaining help from GSS."
-msgstr ""
+msgstr "Votre abonnement Red Hat vous donne permet d'avoir accès au service de support global de Red Hat (GSS). Visitez <ulink url=\"http://support.redhat.com\"></ulink> pour avoir plus d'information sur l'obtention d'aide de la part de GSS."
 
 #. Tag: term
 #: Feedback.xml:34
 #, no-c-format
 msgid "Other Red Hat documentation"
-msgstr ""
+msgstr "Autres documents de Red Hat"
 
 #. Tag: para
 #: Feedback.xml:36
@@ -86,13 +87,13 @@ msgstr ""
 msgid ""
 "Access other Red Hat documentation at <ulink url=\"http://www.redhat.com/docs"
 "\"></ulink>"
-msgstr ""
+msgstr "Accédez aux autres documents de Red Hat sur <ulink url=\"http://www.redhat.com/docs\"></ulink>"
 
 #. Tag: term
 #: Feedback.xml:42
 #, no-c-format
 msgid "Red Hat electronic mailing lists"
-msgstr ""
+msgstr "Listes de diffusion de Red Hat"
 
 #. Tag: para
 #: Feedback.xml:44
@@ -103,7 +104,7 @@ msgid ""
 "lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\"></ulink>. "
 "Click on the name of any list to subscribe to that list or to access the "
 "list archives."
-msgstr ""
+msgstr "Red Hat est l'hôte de nombreuses listes de diffusion traitant de ses logiciels et technologies. Vous trouverez un ensemble des listes de diffusion disponibles au public sur <ulink url=\"https://www.redhat.com/mailman/listinfo\"></ulink>. Cliquez sur le nom d'une liste pour vous inscrire à celle-ci ou pour accéder à ses archives."
 
 #. Tag: title
 #: Feedback.xml:53
@@ -141,13 +142,11 @@ msgstr ""
 
 #. Tag: para
 #: Feedback.xml:61
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "When submitting a bug report, be sure to mention the manual&#39;s "
 "identifier: <citetitle>&BOOKID;</citetitle>"
-msgstr ""
-"Lorsque vous soumettez un rapport d'erreurs, veuillez indiquer clairement "
-"les références du manuel&nbsp;: <citetitle>&BOOKID;</citetitle>"
+msgstr "Lorsque vous soumettez un rapport de bogues, veuillez indiquer clairement les références du manuel&nbsp;: <citetitle>&BOOKID;</citetitle>"
 
 #. Tag: para
 #: Feedback.xml:64
@@ -164,5 +163,3 @@ msgstr ""
 "également ajouter un extrait du texte qui l'entoure, afin que nous puissions "
 "la retrouver facilement."
 
-#~ msgid "translator-credits"
-#~ msgstr "translator-credits"
