--- a/publican-redhat/gu-IN/Feedback.po
+++ b/publican-redhat/gu-IN/Feedback.po
@@ -1,42 +1,43 @@
 # translation of Feedback.po to Gujarati
 # Ankit Patel <ankit@redhat.com>, 2007.
+# Sweta Kothari <swkothar@redhat.com>, 2010.
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2010-02-26 01:23+0000\n"
-"PO-Revision-Date: 2007-10-29 13:25+0530\n"
-"Last-Translator: Ankit Patel <ankit@redhat.com>\n"
-"Language-Team: Gujarati <fedora-trans-gu@redhat.com>\n"
+"PO-Revision-Date: 2010-03-03 12:15+0530\n"
+"Last-Translator: Sweta Kothari <swkothar@redhat.com>\n"
+"Language-Team: Gujarati\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
-"Plural-Forms:  nplurals=2; plural=(n!=1);\n"
+"Plural-Forms: nplurals=2; plural=(n!=1);\n"
 "\n"
 
 #. Tag: title
 #, no-c-format
 msgid "Getting Help and Giving Feedback"
-msgstr ""
+msgstr "મદદને મેળવી રહ્યા છે અને ફીડબેકને આપી રહ્યા છે"
 
 #. Tag: title
 #: Feedback.xml:8
 #, no-c-format
 msgid "Do You Need Help?"
-msgstr ""
+msgstr "શું તમારે મદદની જરૂર છે?"
 
 #. Tag: primary
 #: Feedback.xml:10
 #, no-c-format
 msgid "help"
-msgstr ""
+msgstr "મદદ"
 
 #. Tag: secondary
 #: Feedback.xml:11
 #, no-c-format
 msgid "getting help"
-msgstr ""
+msgstr "મદદને મેળવી રહ્યા છે"
 
 #. Tag: para
 #: Feedback.xml:13
@@ -44,13 +45,13 @@ msgstr ""
 msgid ""
 "If you experience difficulty with a procedure described in this "
 "documentation, you can find help in the following ways:"
-msgstr ""
+msgstr "જો તમને આ દસ્તાવેજીકરણમાં વર્ણવેલ પ્રક્રિયા સાથએ મુશ્કેલી અનુભવો તો, તમે નીચેનાં રસ્તાઓમાં મદદને શોધી શકો છો:"
 
 #. Tag: term
 #: Feedback.xml:18
 #, no-c-format
 msgid "Red Hat Knowledgebase"
-msgstr ""
+msgstr "Red Hat Knowledgebase"
 
 #. Tag: para
 #: Feedback.xml:20
@@ -59,13 +60,13 @@ msgid ""
 "Visit the Red Hat Knowledgebase at <ulink url=\"http://kbase.redhat.com\"></"
 "ulink> to search or browse through technical support articles about Red Hat "
 "products."
-msgstr ""
+msgstr "શોધવા માટે <ulink url=\"http://kbase.redhat.com\"></ulink> પર Red Hat Knowledgebase ની મુલાકાત લો અને Red Hat પ્રોડક્ટો વિશે ટેકનિકલ આધાર લેખો મારફતે બ્રાઉઝ કરો."
 
 #. Tag: term
 #: Feedback.xml:26
 #, no-c-format
 msgid "Red Hat Global Support Services"
-msgstr ""
+msgstr "Red Hat Global Support Services"
 
 #. Tag: para
 #: Feedback.xml:28
@@ -75,12 +76,14 @@ msgid ""
 "Support Services (GSS). Visit <ulink url=\"http://support.redhat.com\"></"
 "ulink> for more information about obtaining help from GSS."
 msgstr ""
+"Red Hat Global Support Services (GSS) માંથી આધાર માટે તમારાં Red Hat ઉમેદવારી પુસ્તકો. GSS માંથી મદદને પ્રાપ્ત કરવા વિશે વધારે જાણકારી માટે "
+"<ulink url=\"http://support.redhat.com\"></ulink> ની મુલાકાત લો."
 
 #. Tag: term
 #: Feedback.xml:34
 #, no-c-format
 msgid "Other Red Hat documentation"
-msgstr ""
+msgstr "બીજુ Red Hat દસ્તાવેજીકરણ"
 
 #. Tag: para
 #: Feedback.xml:36
@@ -88,13 +91,13 @@ msgstr ""
 msgid ""
 "Access other Red Hat documentation at <ulink url=\"http://www.redhat.com/docs"
 "\"></ulink>"
-msgstr ""
+msgstr "<ulink url=\"http://www.redhat.com/docs\"></ulink> પર બીજા Red Hat દસ્તાવેજીકરણને પ્રવેશો"
 
 #. Tag: term
 #: Feedback.xml:42
 #, no-c-format
 msgid "Red Hat electronic mailing lists"
-msgstr ""
+msgstr "Red Hat ઇલેક્ટ્રોનિક મેઇલિંગ યાદી"
 
 #. Tag: para
 #: Feedback.xml:44
@@ -105,7 +108,7 @@ msgid ""
 "lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\"></ulink>. "
 "Click on the name of any list to subscribe to that list or to access the "
 "list archives."
-msgstr ""
+msgstr "Red Hat સોફ્ટવેર અને ટૅકનોલોજીની ચર્ચા માટે ઇલેક્ટ્રોનિક મેઇલિંગ યાદીઓની વિશાળ સંખ્યાને યજમાનિત કરે છે. તમે <ulink url=\"https://www.redhat.com/mailman/listinfo\"></ulink> પર સાર્વરજનિક ઉપલ્બધ યાદીઓની યાદીને શોધી શકો છો. તે યાદીનું ઉમેદવારી કરવા માટે અથવા જૂની યાદીમાં પ્રવેશ કરવા માટે કોઇપણ યાદીનાં નામ પર ક્લિક કરો."
 
 #. Tag: title
 #: Feedback.xml:53
@@ -143,12 +146,12 @@ msgstr ""
 
 #. Tag: para
 #: Feedback.xml:61
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "When submitting a bug report, be sure to mention the manual&#39;s "
 "identifier: <citetitle>&BOOKID;</citetitle>"
 msgstr ""
-"જ્યારે ભૂલનો અહેવાલ જમા કરી રહ્યા હોય, ત્યારે માર્ગદર્શિકાના ઓળખાવનારનું સૂચન કરવાનું ભૂલશો "
+"જ્યારે ભૂલનો અહેવાલ જમા કરી રહ્યા હોય, ત્યારે માર્ગદર્શિકા&#39; ના ઓળખાવનારનું સૂચન કરવાનું ભૂલશો "
 "નહિં: <citetitle>&BOOKID;</citetitle>"
 
 #. Tag: para
@@ -164,5 +167,3 @@ msgstr ""
 "ચોક્કસ બનવાનો પ્રયાસ કરો. જો તમને ભૂલ મળી આવે, તો મહેરબાની કરીને વિભાગ નંબર અને "
 "આસપાસના અમુક લખાણનો સમાવેશ કરો કે જેથી અમે તેને સરળતાથી શોધી શકીએ."
 
-#~ msgid "translator-credits"
-#~ msgstr "અંકિત પટેલ <ankit@redhat.com>"
