--- a/publican-redhat/it-IT/Feedback.po
+++ b/publican-redhat/it-IT/Feedback.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2010-02-26 01:23+0000\n"
-"PO-Revision-Date: 2007-10-23 12:28+1000\n"
+"PO-Revision-Date: 2010-03-01 15:41+1000\n"
 "Last-Translator: \n"
 "Language-Team:  <it@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -15,25 +15,25 @@ msgstr ""
 #. Tag: title
 #, no-c-format
 msgid "Getting Help and Giving Feedback"
-msgstr ""
+msgstr "Come ottenere assistenza ed inviare commenti"
 
 #. Tag: title
 #: Feedback.xml:8
 #, no-c-format
 msgid "Do You Need Help?"
-msgstr ""
+msgstr "Avete bisogno di aiuto?"
 
 #. Tag: primary
 #: Feedback.xml:10
 #, no-c-format
 msgid "help"
-msgstr ""
+msgstr "aiuto"
 
 #. Tag: secondary
 #: Feedback.xml:11
 #, no-c-format
 msgid "getting help"
-msgstr ""
+msgstr "come ottenere assistenza"
 
 #. Tag: para
 #: Feedback.xml:13
@@ -41,13 +41,13 @@ msgstr ""
 msgid ""
 "If you experience difficulty with a procedure described in this "
 "documentation, you can find help in the following ways:"
-msgstr ""
+msgstr "Se avete incontrato delle difficoltà con una procedura descritta in questa documentazione sarà possibile ottenere assistenza nei modi seguenti:"
 
 #. Tag: term
 #: Feedback.xml:18
 #, no-c-format
 msgid "Red Hat Knowledgebase"
-msgstr ""
+msgstr "Red Hat Knowledgebase"
 
 #. Tag: para
 #: Feedback.xml:20
@@ -57,12 +57,14 @@ msgid ""
 "ulink> to search or browse through technical support articles about Red Hat "
 "products."
 msgstr ""
+"Visitate il Red Hat Knowledgebase su <ulink url=\"http://kbase.redhat.com\"></"
+"ulink> per trovare o consultare gli articoli di supporto tecnico relativi ai prodotti di Red Hat."
 
 #. Tag: term
 #: Feedback.xml:26
 #, no-c-format
 msgid "Red Hat Global Support Services"
-msgstr ""
+msgstr "Red Hat Global Support Services"
 
 #. Tag: para
 #: Feedback.xml:28
@@ -72,12 +74,15 @@ msgid ""
 "Support Services (GSS). Visit <ulink url=\"http://support.redhat.com\"></"
 "ulink> for more information about obtaining help from GSS."
 msgstr ""
+"La sottoscrizione a Red Hat conferisce il diritto al supporto da parte del Red Hat Global "
+"Support Services (GSS). Consultare <ulink url=\"http://support.redhat.com\"></"
+"ulink> per maggiori informazioni su come ottenere l'assistenza dal GSS."
 
 #. Tag: term
 #: Feedback.xml:34
 #, no-c-format
 msgid "Other Red Hat documentation"
-msgstr ""
+msgstr "Altre documentazioni di Red Hat"
 
 #. Tag: para
 #: Feedback.xml:36
@@ -86,12 +91,14 @@ msgid ""
 "Access other Red Hat documentation at <ulink url=\"http://www.redhat.com/docs"
 "\"></ulink>"
 msgstr ""
+"Accedete ad altre documentazioni di Red Hat su <ulink url=\"http://www.redhat.com/docs"
+"\"></ulink>"
 
 #. Tag: term
 #: Feedback.xml:42
 #, no-c-format
 msgid "Red Hat electronic mailing lists"
-msgstr ""
+msgstr "Mailing list elettroniche di Red Hat"
 
 #. Tag: para
 #: Feedback.xml:44
@@ -102,7 +109,7 @@ msgid ""
 "lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\"></ulink>. "
 "Click on the name of any list to subscribe to that list or to access the "
 "list archives."
-msgstr ""
+msgstr "Red Hat presenta un gran numero di mailing list elettroniche per la discussione sulle tecnologie e sul software di Red Hat. È possibile trovare un elenco di liste pubbliche disponibili su <ulink url=\"https://www.redhat.com/mailman/listinfo\"></ulink>. Fate clic sul nome della lista desiderata per eseguire la registrazione ad accedere ai relativi archivi."
 
 #. Tag: title
 #: Feedback.xml:53
@@ -140,12 +147,12 @@ msgstr ""
 
 #. Tag: para
 #: Feedback.xml:61
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "When submitting a bug report, be sure to mention the manual&#39;s "
 "identifier: <citetitle>&BOOKID;</citetitle>"
 msgstr ""
-"Quando inviate un bug report, assicuratevi di indicare l'identificatore del "
+"Quando inviate un bug report assicuratevi di indicare l'identificatore del "
 "manuale: <citetitle>&BOOKID;</citetitle>"
 
 #. Tag: para
@@ -157,10 +164,8 @@ msgid ""
 "include the section number and some of the surrounding text so we can find "
 "it easily."
 msgstr ""
-"Se inviate un suggerimento per contribuire al miglioramento della guida, "
+"Se inviate un commento per contribuire al miglioramento della guida, "
 "cercate di essere il più specifici possibile. Se avete individuato un "
 "errore, indicate il numero della sezione e alcune righe di testo, in modo da "
 "agevolare la ricerca dell'errore."
 
-#~ msgid "translator-credits"
-#~ msgstr "crediti-traduttore"
