--- a/publican-redhat/ja-JP/Feedback.po
+++ b/publican-redhat/ja-JP/Feedback.po
@@ -1,40 +1,41 @@
 # translation of Feedback.po to Japanese
-# Kiyoto Hashida <khashida@redhat.com>, 2007.
+# Kiyoto Hashida <khashida@redhat.com>, 2007, 2010.
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2010-02-26 01:23+0000\n"
-"PO-Revision-Date: 2007-10-24 11:52+1000\n"
+"PO-Revision-Date: 2010-03-01 15:53+0900\n"
 "Last-Translator: Kiyoto Hashida <khashida@redhat.com>\n"
 "Language-Team: Japanese <jp@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
+"Plural-Forms: Plural-Forms: nplurals=1; plural=0;\n\n"
 
 #. Tag: title
 #, no-c-format
 msgid "Getting Help and Giving Feedback"
-msgstr ""
+msgstr "ヘルプの取得とフィードバックの提出"
 
 #. Tag: title
 #: Feedback.xml:8
 #, no-c-format
 msgid "Do You Need Help?"
-msgstr ""
+msgstr "ヘルプが必要ですか？"
 
 #. Tag: primary
 #: Feedback.xml:10
 #, no-c-format
 msgid "help"
-msgstr ""
+msgstr "ヘルプ"
 
 #. Tag: secondary
 #: Feedback.xml:11
 #, no-c-format
 msgid "getting help"
-msgstr ""
+msgstr "ヘルプの取得"
 
 #. Tag: para
 #: Feedback.xml:13
@@ -43,12 +44,14 @@ msgid ""
 "If you experience difficulty with a procedure described in this "
 "documentation, you can find help in the following ways:"
 msgstr ""
+"この文章に説明してある手順で問題に遭遇した場合は、以下のような方法で "
+"ヘルプを見つけることができます:"
 
 #. Tag: term
 #: Feedback.xml:18
 #, no-c-format
 msgid "Red Hat Knowledgebase"
-msgstr ""
+msgstr "Red Hat Knowledgebase"
 
 #. Tag: para
 #: Feedback.xml:20
@@ -58,12 +61,14 @@ msgid ""
 "ulink> to search or browse through technical support articles about Red Hat "
 "products."
 msgstr ""
+"<ulink url=\"http://kbase.redhat.com\"></ulink> にある Red Hat Knowledgebase を "
+"開くと、Red Hat の製品に関する技術サポート記事の検索や閲覧ができます。"
 
 #. Tag: term
 #: Feedback.xml:26
 #, no-c-format
 msgid "Red Hat Global Support Services"
-msgstr ""
+msgstr "Red Hat グローバルサポートサービス"
 
 #. Tag: para
 #: Feedback.xml:28
@@ -73,12 +78,15 @@ msgid ""
 "Support Services (GSS). Visit <ulink url=\"http://support.redhat.com\"></"
 "ulink> for more information about obtaining help from GSS."
 msgstr ""
+"お持ちの Red Hat サブスクリプションが Red Hat グローバルサポートサービス（GSS）からの "
+"サポートを得る権利を持っています。GSS からの援助を得る為の情報には、 "
+"<ulink url=\"http://support.redhat.com\"></ulink> をご覧下さい。"
 
 #. Tag: term
 #: Feedback.xml:34
 #, no-c-format
 msgid "Other Red Hat documentation"
-msgstr ""
+msgstr "その他の Red Hat の文書"
 
 #. Tag: para
 #: Feedback.xml:36
@@ -87,12 +95,14 @@ msgid ""
 "Access other Red Hat documentation at <ulink url=\"http://www.redhat.com/docs"
 "\"></ulink>"
 msgstr ""
+"<ulink url=\"http://www.redhat.com/docs\"></ulink> にある他の Red Hat 文書に "
+"アクセスして下さい。"
 
 #. Tag: term
 #: Feedback.xml:42
 #, no-c-format
 msgid "Red Hat electronic mailing lists"
-msgstr ""
+msgstr "Red Hat 電子メール送信リスト"
 
 #. Tag: para
 #: Feedback.xml:44
@@ -104,6 +114,10 @@ msgid ""
 "Click on the name of any list to subscribe to that list or to access the "
 "list archives."
 msgstr ""
+"Red Hat は Red Hat ソフトウェアと技術に関する討論のために多くの電子メール "
+"送信リストをホストしています。公開されているリストは <ulink url=\"https://www.redhat.com/mailman/listinfo\"></ulink> "
+"で見つけることができます。リストの名前をクリックするとそのリストをサブスクライブしたり、 "
+"リストアーカイブへアクセスできるようになります。 "
 
 #. Tag: title
 #: Feedback.xml:53
@@ -141,12 +155,12 @@ msgstr ""
 
 #. Tag: para
 #: Feedback.xml:61
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "When submitting a bug report, be sure to mention the manual&#39;s "
 "identifier: <citetitle>&BOOKID;</citetitle>"
 msgstr ""
-"バグ報告を提出される場合は、そのドキュメントの識別子 <citetitle>&BOOKID;</"
+"バグ報告を提出される場合は、そのマニュアルの識別子 <citetitle>&BOOKID;</"
 "citetitle> を 忘れずに添えてください。"
 
 #. Tag: para
@@ -159,8 +173,6 @@ msgid ""
 "it easily."
 msgstr ""
 "ドキュメントを改善する御提案をお持ちの場合は、 出来るだけ詳しく説明して頂くよ"
-"うに お願いします。エラーを発見された場合は、そのセクション番号とその周辺の文"
+"うにお願いします。エラーを発見された場合は、そのセクション番号とその周辺の文"
 "章も含んで 頂くと弊社でより迅速にその場所が発見できるようになります。"
 
-#~ msgid "translator-credits"
-#~ msgstr "kiyoto james hashida, khashida@redhat.com, 2007"
