--- a/publican-redhat/ml-IN/Feedback.po
+++ b/publican-redhat/ml-IN/Feedback.po
@@ -1,13 +1,13 @@
-# translation of Feedback.po to Malayalam
+# translation of Feedback.po to
 # Ani Peter <apeter@redhat.com>, 2007.
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2010-02-26 01:23+0000\n"
-"PO-Revision-Date: 2007-10-30 13:25+0530\n"
-"Last-Translator: Ani Peter <apeter@redhat.com>\n"
-"Language-Team: Malayalam\n"
+"PO-Revision-Date: 2010-03-02 12:44+0530\n"
+"Last-Translator: \n"
+"Language-Team:  <en@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -16,25 +16,25 @@ msgstr ""
 #. Tag: title
 #, no-c-format
 msgid "Getting Help and Giving Feedback"
-msgstr ""
+msgstr "സഹായം ലഭിക്കുക, അഭിപ്രായം നിര്‍ദ്ദേശിക്കുക"
 
 #. Tag: title
 #: Feedback.xml:8
 #, no-c-format
 msgid "Do You Need Help?"
-msgstr ""
+msgstr "സഹായം ആവശ്യമെങ്കില്‍?"
 
 #. Tag: primary
 #: Feedback.xml:10
 #, no-c-format
 msgid "help"
-msgstr ""
+msgstr "സഹായം"
 
 #. Tag: secondary
 #: Feedback.xml:11
 #, no-c-format
 msgid "getting help"
-msgstr ""
+msgstr "സഹായം ലഭ്യമാക്കുക"
 
 #. Tag: para
 #: Feedback.xml:13
@@ -43,12 +43,15 @@ msgid ""
 "If you experience difficulty with a procedure described in this "
 "documentation, you can find help in the following ways:"
 msgstr ""
+"ഈ വിവരണക്കുറിപ്പില്‍ വിശദീകരിക്കുന്ന പ്രക്രിയകള്‍ മനസ്സിലാക്കുന്നതില്‍ "
+"നിങ്ങള്‍ക്കു് എന്തെങ്കിലും ബുദ്ധിമുട്ടുണ്ടെങ്കില്‍, നിങ്ങള്‍ക്കു് സഹായങ്ങള്‍ "
+"ഇങ്ങനെ ലഭ്യമാക്കാം:"
 
 #. Tag: term
 #: Feedback.xml:18
 #, no-c-format
 msgid "Red Hat Knowledgebase"
-msgstr ""
+msgstr "Red Hat നോളഡ്ജ്ബെയിസ്"
 
 #. Tag: para
 #: Feedback.xml:20
@@ -58,12 +61,15 @@ msgid ""
 "ulink> to search or browse through technical support articles about Red Hat "
 "products."
 msgstr ""
+"Red Hat പ്രൊഡക്ടുകളെപ്പറ്റിയുള്ള സാങ്കേതിക ലേഖനങ്ങള്‍ക്കായി "
+"<ulink url=\"http://kbase.redhat.com\"></ulink>-ലുള്ള Red Hat നോളഡ്ജ്ബെയിസ് "
+"സന്ദര്‍ശിക്കുക."
 
 #. Tag: term
 #: Feedback.xml:26
 #, no-c-format
 msgid "Red Hat Global Support Services"
-msgstr ""
+msgstr "Red Hat ഗ്ലോബല്‍ സപ്പോര്‍ട്ട് സര്‍വീസുകള്‍"
 
 #. Tag: para
 #: Feedback.xml:28
@@ -73,12 +79,16 @@ msgid ""
 "Support Services (GSS). Visit <ulink url=\"http://support.redhat.com\"></"
 "ulink> for more information about obtaining help from GSS."
 msgstr ""
+"നിങ്ങളുടെ Red Hat സബ്സ്ക്രിപ്ഷന്‍ പ്രകാരം നിങ്ങള്‍ക്കു് Red Hat ഗ്ലോബല്‍ "
+"സപ്പോര്‍ട്ട് സര്‍വീസസില്‍ (GSS) നിന്നുള്ള പിന്തുണ ലഭ്യമാകുന്നു. GSS-ല്‍ "
+"നിന്നും കൂടുതല്‍ സഹായങ്ങള്‍ ലഭിക്കുന്നതിനെപ്പറ്റിയുള്ള വിവരങ്ങള്‍ക്കായി "
+"<ulink url=\"http://support.redhat.com\"></ulink> കാണുക."
 
 #. Tag: term
 #: Feedback.xml:34
 #, no-c-format
 msgid "Other Red Hat documentation"
-msgstr ""
+msgstr "മറ്റു് Red Hat വിവരണക്കുറിപ്പുകള്‍"
 
 #. Tag: para
 #: Feedback.xml:36
@@ -87,12 +97,14 @@ msgid ""
 "Access other Red Hat documentation at <ulink url=\"http://www.redhat.com/docs"
 "\"></ulink>"
 msgstr ""
+"മറ്റു് Red Hat വിവരണക്കുറിപ്പുകള്‍ക്കായി <ulink url=\"http://www.redhat.com/docs"
+"\"></ulink> കാണുക."
 
 #. Tag: term
 #: Feedback.xml:42
 #, no-c-format
 msgid "Red Hat electronic mailing lists"
-msgstr ""
+msgstr "Red Hat മെയിലിങ് ലിസ്റ്റുകള്‍"
 
 #. Tag: para
 #: Feedback.xml:44
@@ -104,24 +116,29 @@ msgid ""
 "Click on the name of any list to subscribe to that list or to access the "
 "list archives."
 msgstr ""
+"Red Hat സോഫ്റ്റ്‌വെയറും സാങ്കേതിക വിവരങ്ങളെപ്പറ്റിയും ചര്‍ച്ച ചെയ്യുന്നതിനായി "
+"Red Hat അനേകം മെയിലിങ് ലിസ്റ്റുകള്‍ ലഭ്യമാക്കുന്നു. അത്തരത്തിലുള്ള പബ്ലിക് "
+"മെയിലിങ് ലിസ്റ്റുകള്‍ ഇവിടെ ലഭിക്കുന്നു: <ulinkurl=\"https://www.redhat.com/mailman/listinfo\"></ulink>.ഒരു ലിസ്റ്റില്‍ "
+"അംഗമാകുന്നതിനായി അല്ലെങ്കില്‍ അതിലുള്ള ആര്‍ക്കൈവുകള്‍ക്കായി ആ ലിസ്റ്റില്‍ "
+"ക്ലിക്ക് ചെയ്യുക."
 
 #. Tag: title
 #: Feedback.xml:53
 #, no-c-format
 msgid "We Need Feedback!"
-msgstr "ഞങ്ങള്‍ക്ക് അഭിപ്റായം അയച്ചു തരിക!"
+msgstr "ഞങ്ങള്‍ക്കു് അഭിപ്രായം അയച്ചു തരിക!"
 
 #. Tag: primary
 #: Feedback.xml:55
 #, no-c-format
 msgid "feedback"
-msgstr "അഭിപ്റായം"
+msgstr "അഭിപ്രായം"
 
 #. Tag: secondary
 #: Feedback.xml:56
 #, no-c-format
 msgid "contact information for this manual"
-msgstr "ഈ മാനുവലിനായി ബന്ധപ്പെടുവാനുള്ള വിവരങ്ങള്‍"
+msgstr "ഈ മാനുവലിലേക്കു് ബന്ധപ്പെടുവാനുള്ള വിവരങ്ങള്‍"
 
 #. Tag: para
 #: Feedback.xml:58
@@ -133,21 +150,17 @@ msgid ""
 "\">http://bugzilla.redhat.com/</ulink> against the product "
 "<application>&PRODUCT;.</application>"
 msgstr ""
-"നിങ്ങള്‍ക്ക് ഈ മാനുവലിലുള്ള പിശകുകള്‍ ഞങ്ങളെ അറിയിക്കണമെങ്കില്‍, അല്ലെങ്കില്‍ ഇത് കൂടുതല്‍ "
-"മെച്ചപ്പെടുത്തുന്നതിനുള്ള നിറ്‍ദ്ദേശങ്ങളും അഭിപ്റായങ്ങളും ഞങ്ങളെ അറിയിക്കുന്നതിനായി ദയവായി "
-"ബഗ്സിലായില്‍ <application>&PRODUCT;. </application> എന്ന പ്റൊഡക്ടിന് എതിരെ ഒരു "
-"റിപോറ്‍ട്ട് രേഖപ്പെടുത്തുക: <ulink url=\"http://bugzilla.redhat.com/\">http://"
-"bugzilla.redhat.com/</ulink>."
+"നിങ്ങള്‍ക്ക് ഈ മാനുവലിലുള്ള പിശകുകള്‍ ഞങ്ങളെ അറിയിക്കണമെങ്കില്‍, അല്ലെങ്കില്‍ "
+"ഇതു് കൂടുതല്‍ മെച്ചപ്പെടുത്തുന്നതിനുള്ള നിര്‍ദ്ദേശങ്ങളും അഭിപ്രായങ്ങളും ഞങ്ങളെ "
+"അറിയിക്കുന്നതിനായി ദയവായി ബഗ്സിലായില്‍ <application>&PRODUCT;. </application> എന്ന പ്രൊഡക്ടിനെതിരെ ഒരു റിപോര്‍ട്ട് രേഖപ്പെടുത്തുക: <ulinkurl=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat.com/</ulink>."
 
 #. Tag: para
 #: Feedback.xml:61
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "When submitting a bug report, be sure to mention the manual&#39;s "
 "identifier: <citetitle>&BOOKID;</citetitle>"
-msgstr ""
-"ഒരു ബഗ് രേഖപ്പെടുത്തുമ്പോള്‍, മാനുവലിന്റെ ഐഡന്റിഫയറ്‍ നല്‍കുന്നു എന്ന് പ്റത്യേകം ഉറപ്പ് വരുത്തുക: "
-"<citetitle>&BOOKID;</citetitle>"
+msgstr "ഒരു ബഗ് രേഖപ്പെടുത്തുമ്പോള്‍, manual&#39;s ഐഡന്റിഫയര്‍ നല്‍കുന്നു എന്ന് ഉറപ്പ് വരുത്തുക: <citetitle>&BOOKID;</citetitle>"
 
 #. Tag: para
 #: Feedback.xml:64
@@ -158,9 +171,8 @@ msgid ""
 "include the section number and some of the surrounding text so we can find "
 "it easily."
 msgstr ""
-"ഈ വിവരണം നിങ്ങള്‍ക്ക് മെച്ചപ്പെടുത്തണമെങ്കില്‍, ദയവായി ഇത് വ്യക്തമായി വിവരിക്കേണ്ടതുണ്ട്. പിശകുകള്‍ "
-"രേഖപ്പെടുത്തുമ്പോള്‍, അത് ഏത് ഭാഗത്തെന്നും ചുറ്റുവട്ടത്തുള്ള ഏതെങ്കിലും വാചകളും ഉള്‍പ്പെടുത്തുന്നത് "
+"ഈ വിവരണം നിങ്ങള്‍ക്ക് മെച്ചപ്പെടുത്തണമെങ്കില്‍, ദയവായി ഇത് വ്യക്തമായി "
+"വിവരിക്കേണ്ടതുണ്ട്. പിശകുകള്‍ രേഖപ്പെടുത്തുമ്പോള്‍, അതു് ഏതു് ഭാഗത്തെന്നു് "
+"സൂചിപ്പിക്കുന്ന നംബറും ചുറ്റുവട്ടത്തുള്ള ഏതെങ്കിലും വാചകളും ഉള്‍പ്പെടുത്തുന്നതു് "
 "ഉത്തമമായിരിക്കും."
 
-#~ msgid "translator-credits"
-#~ msgstr "അനി പീറ്ററ്‍ <apeter@redhat.com>"
