--- a/publican-redhat/mr-IN/Feedback.po
+++ b/publican-redhat/mr-IN/Feedback.po
@@ -1,42 +1,43 @@
-# translation of Feedback.po to marathi
+# translation of Feedback.po to Marathi
 # sandeep shedmake <sandeep.shedmake@gmail.com>, 2007.
+# Sandeep Shedmake <sshedmak@redhat.com>, 2010.
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2010-02-26 01:23+0000\n"
-"PO-Revision-Date: 2007-10-29 16:38+0530\n"
-"Last-Translator: sandeep shedmake <sandeep.shedmake@gmail.com>\n"
-"Language-Team: marathi\n"
+"PO-Revision-Date: 2010-03-02 12:26+0530\n"
+"Last-Translator: Sandeep Shedmake <sshedmak@redhat.com>\n"
+"Language-Team: Marathi <fedora-trans-mr@redhat.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
-"Plural-Forms: Plural-Forms: nplurals=2; plural=(n!=1);\n"
+"Plural-Forms: nplurals=2; plural=(n!=1);\n"
 "\n"
 
 #. Tag: title
 #, no-c-format
 msgid "Getting Help and Giving Feedback"
-msgstr ""
+msgstr "मदत प्राप्त करणे व प्रतिसाद देणे"
 
 #. Tag: title
 #: Feedback.xml:8
 #, no-c-format
 msgid "Do You Need Help?"
-msgstr ""
+msgstr "मदत हवी आहे का?"
 
 #. Tag: primary
 #: Feedback.xml:10
 #, no-c-format
 msgid "help"
-msgstr ""
+msgstr "मदत"
 
 #. Tag: secondary
 #: Feedback.xml:11
 #, no-c-format
 msgid "getting help"
-msgstr ""
+msgstr "मदत प्राप्त करत आहे"
 
 #. Tag: para
 #: Feedback.xml:13
@@ -44,13 +45,13 @@ msgstr ""
 msgid ""
 "If you experience difficulty with a procedure described in this "
 "documentation, you can find help in the following ways:"
-msgstr ""
+msgstr "या दस्तऐवजातील वर्णनीकृत पद्धतीसह अडचण आढळल्यास, मदत खालील प्रकारे प्राप्त होऊ शकते:"
 
 #. Tag: term
 #: Feedback.xml:18
 #, no-c-format
 msgid "Red Hat Knowledgebase"
-msgstr ""
+msgstr "Red Hat Knowledgebase"
 
 #. Tag: para
 #: Feedback.xml:20
@@ -59,13 +60,13 @@ msgid ""
 "Visit the Red Hat Knowledgebase at <ulink url=\"http://kbase.redhat.com\"></"
 "ulink> to search or browse through technical support articles about Red Hat "
 "products."
-msgstr ""
+msgstr "Red Hat उत्पादनांविषयी तांत्रीक लेख शोधण्यासाठी किंवा संचारनकरीता Red Hat Knowledgebase साठी <ulink url=\"http://kbase.redhat.com\"></ulink> येथे भेट द्या."
 
 #. Tag: term
 #: Feedback.xml:26
 #, no-c-format
 msgid "Red Hat Global Support Services"
-msgstr ""
+msgstr "Red Hat Global Support Services"
 
 #. Tag: para
 #: Feedback.xml:28
@@ -74,13 +75,13 @@ msgid ""
 "Your Red Hat subscription entitles you to support from Red Hat Global "
 "Support Services (GSS). Visit <ulink url=\"http://support.redhat.com\"></"
 "ulink> for more information about obtaining help from GSS."
-msgstr ""
+msgstr "तुमचे Red Hat सबस्क्रिप्शन Red Hat Global Support Services (GSS) पासून समर्थन प्राप्त करण्यास परवानगी देते. GSS पासून मदत प्राप्त करण्यासाठी <ulink url=\"http://support.redhat.com\"></ulink> येथे भेट द्या."
 
 #. Tag: term
 #: Feedback.xml:34
 #, no-c-format
 msgid "Other Red Hat documentation"
-msgstr ""
+msgstr "इतर Red Hat दस्तऐवजीकरण"
 
 #. Tag: para
 #: Feedback.xml:36
@@ -89,12 +90,14 @@ msgid ""
 "Access other Red Hat documentation at <ulink url=\"http://www.redhat.com/docs"
 "\"></ulink>"
 msgstr ""
+"इतर Red Hat दस्तऐवजीकरण करीता प्रवेश <ulink url=\"http://www.redhat.com/docs"
+"\"></ulink> येथून प्राप्त करा"
 
 #. Tag: term
 #: Feedback.xml:42
 #, no-c-format
 msgid "Red Hat electronic mailing lists"
-msgstr ""
+msgstr "Red Hat इलेक्ट्रॉनीक मेलींग लिस्टस्"
 
 #. Tag: para
 #: Feedback.xml:44
@@ -106,6 +109,9 @@ msgid ""
 "Click on the name of any list to subscribe to that list or to access the "
 "list archives."
 msgstr ""
+"Red Hat सॉफ्टवेअर व तंत्रज्ञाण विषयी चर्चाकरीता Red Hat अनेक इलेक्ट्रॉनीक मेलींग लिस्टस् आयोजीत करतो. "
+"<ulink url=\"https://www.redhat.com/mailman/listinfo\"></ulink> येथे तुम्हाला पब्लिक लिस्टस् आढळतील. "
+"ठराविक लिस्ट करीता सबस्क्राइब होण्यासाठी किंवा लिस्ट आर्काइव्हस् करीता प्रवेशसाठी लिस्टच्या नावावर क्लिक करा."
 
 #. Tag: title
 #: Feedback.xml:53
@@ -142,13 +148,11 @@ msgstr ""
 
 #. Tag: para
 #: Feedback.xml:61
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "When submitting a bug report, be sure to mention the manual&#39;s "
 "identifier: <citetitle>&BOOKID;</citetitle>"
-msgstr ""
-"दोषरहीत अहवाल सादर करतेवेळी, पुस्तिकेचे ओळखकार <citetitle>&BOOKID;</citetitle> "
-"विषयी उल्लेख जरूर करा"
+msgstr "बग अहवाल सादर करतेवेळी, मॅन्यूअलचे (manual&#39;s) आयडेंटीफायर निर्देशीत करायची खात्री करा: <citetitle>&BOOKID;</citetitle>"
 
 #. Tag: para
 #: Feedback.xml:64
@@ -163,5 +167,3 @@ msgstr ""
 "काही त्रुटी आढळल्यास, कृपया सत्र क्रमांक व काहीक भवतालीचे मजकुर पाठवावे ज्यामुळे पटकण "
 "समस्या शोधण्यास आम्हाला मदत मिळेल."
 
-#~ msgid "translator-credits"
-#~ msgstr "sandeep shedmake <sshedmak@redhat.com> 2007"
