--- a/publican-redhat/or-IN/Feedback.po
+++ b/publican-redhat/or-IN/Feedback.po
@@ -1,43 +1,44 @@
 # translation of Feedback.po to Oriya
 # Subhransu Behera <arya_subhransu@yahoo.co.in>, 2007.
+# Manoj Kumar Giri <mgiri@redhat.com>, 2010.
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2010-02-26 01:23+0000\n"
-"PO-Revision-Date: 2007-11-06 18:13+0530\n"
-"Last-Translator: Subhransu Behera <arya_subhransu@yahoo.co.in>\n"
-"Language-Team: Oriya <oriya-group@lists.sarovar.org>\n"
+"PO-Revision-Date: 2010-03-02 12:30+0530\n"
+"Last-Translator: Manoj Kumar Giri <mgiri@redhat.com>\n"
+"Language-Team: Oriya <oriya-it@googlegroups.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
-"Plural-Forms: Plural-Forms: nplurals=2; plural=(n!=1);\n"
+"Plural-Forms:  nplurals=2; plural=(n!=1);\n\n"
 "\n"
 "\n"
 
 #. Tag: title
 #, no-c-format
 msgid "Getting Help and Giving Feedback"
-msgstr ""
+msgstr "ସହାୟତା ନେବା ଏବଂ ମତାମତ ପ୍ରଦାନ କରିବା"
 
 #. Tag: title
 #: Feedback.xml:8
 #, no-c-format
 msgid "Do You Need Help?"
-msgstr ""
+msgstr "ଆପଣ ସାହାଯ୍ୟ ଆବଶ୍ୟକ କରୁଛନ୍ତି କି?"
 
 #. Tag: primary
 #: Feedback.xml:10
 #, no-c-format
 msgid "help"
-msgstr ""
+msgstr "ସହାୟତା"
 
 #. Tag: secondary
 #: Feedback.xml:11
 #, no-c-format
 msgid "getting help"
-msgstr ""
+msgstr "ସାହାଯ୍ୟ ନେଉଅଛି"
 
 #. Tag: para
 #: Feedback.xml:13
@@ -46,12 +47,14 @@ msgid ""
 "If you experience difficulty with a procedure described in this "
 "documentation, you can find help in the following ways:"
 msgstr ""
+"ଯଦି ଆପଣ ଏହି ଦଲିଲରେ ବର୍ଣ୍ଣନା କରାଯାଇଥିବା ପଦ୍ଧତିରେ କୌଣସି ଅସୁବାଧିର ସମ୍ମୁଖିନ "
+"ହୁଅନ୍ତି, ତେବେ ଆପଣ ନିମ୍ନଲିଖିତ ଉପାୟରେ ସହାୟତା ପାଇପାରିବେ: "
 
 #. Tag: term
 #: Feedback.xml:18
 #, no-c-format
 msgid "Red Hat Knowledgebase"
-msgstr ""
+msgstr "Red Hat Knowledgebase"
 
 #. Tag: para
 #: Feedback.xml:20
@@ -61,12 +64,15 @@ msgid ""
 "ulink> to search or browse through technical support articles about Red Hat "
 "products."
 msgstr ""
+"Red Hat ଉତ୍ପାଦନଗୁଡ଼ିକ ବିଷୟରେ ପାରିଭାଷିକ ସମର୍ଥନ ପତ୍ରିକାଗୁଡ଼ିକରେ ସନ୍ଧାନ ଏବଂ ବ୍ରାଉଜ କରିବା ପାଇଁ "
+"Red Hat Knowledgebase କୁ <ulink url=\"http://kbase.redhat.com\"></ulink> ରେ "
+"ପରିଦର୍ଶନ କରନ୍ତୁ।"
 
 #. Tag: term
 #: Feedback.xml:26
 #, no-c-format
 msgid "Red Hat Global Support Services"
-msgstr ""
+msgstr "Red Hat ସାମଗ୍ରିକ ସମର୍ଥନ ସର୍ଭିସଗୁଡ଼ିକ"
 
 #. Tag: para
 #: Feedback.xml:28
@@ -76,12 +82,15 @@ msgid ""
 "Support Services (GSS). Visit <ulink url=\"http://support.redhat.com\"></"
 "ulink> for more information about obtaining help from GSS."
 msgstr ""
+"ଆପଣଙ୍କର Red Hat ଗ୍ରାହକ ଶୁଳ୍କରେ Red Hat ସାମଗ୍ରିକ ସମର୍ଥନ ସର୍ଭିସଗୁଡ଼ିକ ଅନ୍ତର୍ଭୁକ୍ତ (GSS). "
+"GSS ରୁ ସହାୟତା ପାଇବା ବିଷୟରେ ଅଧିକ ସୂଚନା ପାଇବା ପାଇଁ <ulink url=\"http://support. "
+"redhat.com\"></ulink> କୁ ପରିଦର୍ଶନ କରନ୍ତୁ।"
 
 #. Tag: term
 #: Feedback.xml:34
 #, no-c-format
 msgid "Other Red Hat documentation"
-msgstr ""
+msgstr "ଅନ୍ୟାନ୍ୟ Red Hat ଦଲିଲିକରଣ"
 
 #. Tag: para
 #: Feedback.xml:36
@@ -90,12 +99,14 @@ msgid ""
 "Access other Red Hat documentation at <ulink url=\"http://www.redhat.com/docs"
 "\"></ulink>"
 msgstr ""
+"ଅନ୍ୟାନ୍ୟ Red Hat ଦଲିଲିକରଣକୁ <ulink url=\"http://www.redhat.com/docs"
+"\"></ulink> ଠାରେ ଅଭିଗମ୍ୟ କରନ୍ତୁ "
 
 #. Tag: term
 #: Feedback.xml:42
 #, no-c-format
 msgid "Red Hat electronic mailing lists"
-msgstr ""
+msgstr "Red Hat ଇଲେକ୍ଟ୍ରୋନିକ ମେଲିଙ୍ଗ ତାଲିକାଗୁଡ଼ିକ"
 
 #. Tag: para
 #: Feedback.xml:44
@@ -107,6 +118,11 @@ msgid ""
 "Click on the name of any list to subscribe to that list or to access the "
 "list archives."
 msgstr ""
+"Red Hat ଅନେକ ଇଲେକ୍ଟ୍ରୋନିକ ମେଲିଙ୍ଗ ତାଲିକାଗୁଡ଼ିକୁ Red Hat ସଫ୍ଟୱେର ଏବଂ ପ୍ରଯୁକ୍ତି ବିଜ୍ଞାନ "
+"ବିଷୟରେ ଆଲୋଚନା କରିବା ପାଇଁ ହୋଷ୍ଟ କରିଥାଏ। ଆପଣ ସର୍ବସାଧାରଣ ପାଇଁ ଉପଲବ୍ଧ ତାଲିକାଗୁଡ଼ିକର "
+"ଗୋଟିଏ ତାଲିକା <ulink url=\"https://www.redhat.com/mailman/listinfo\"></ulink> ରେ "
+"ପାଇପାରିବେ। ଯେକୌଣସି ତାଲିକାର ଗୋଟିଏ ନାମ ଉପରେ କ୍ଲିକ କରି ସେହି ତାଲିକାରେ ସଦସ୍ୟତା ପାଇପାରିବେ "
+"ଅଥବା ତାଲିକା ଅଭିଲେଖଗୁଡ଼ିକୁ ଅଭିଗମ୍ୟ କରିପାରିବେ।"
 
 #. Tag: title
 #: Feedback.xml:53
@@ -143,13 +159,13 @@ msgstr ""
 
 #. Tag: para
 #: Feedback.xml:61
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "When submitting a bug report, be sure to mention the manual&#39;s "
 "identifier: <citetitle>&BOOKID;</citetitle>"
 msgstr ""
-"ଗୋଟିଏ ତୃଟି ବିବରଣୀ ଦେବା ସମୟରେ, ମେନ୍ଯୁଆଲର ପରିଚୟକକୁ ଉଲ୍ଲେଖ କରିବା ପାଇଁ ନିଶ୍ଚିତ ହୁଅନ୍ତୁ:"
-"<citetitle>&BOOKID;</citetitle>"
+"ଗୋଟିଏ ତୃଟି ବିବରଣୀ ଦାଖଲ କରିବା ସମୟରେ, ହସ୍ତପୁସ୍ତକ&#39;s ପରିଚାୟକକୁ ଉଲ୍ଲେଖ କରିବା ପାଇଁ "
+"ସୁନିଶ୍ଚିତ କରନ୍ତୁ:<citetitle>&BOOKID;</citetitle>"
 
 #. Tag: para
 #: Feedback.xml:64
@@ -165,5 +181,3 @@ msgstr ""
 "ଦୟାକରି ବିଭାଗର ସଂଖ୍ଯା ଏବଂ ତା ସହିତ ଥିବା କିଛି ପାଠ୍ଯକୁ ଅନ୍ତର୍ଭୂକ୍ତ କରନ୍ତୁ ଯେପରିକି ଆମେ ତାହାକୁ ସହଜରେ "
 "ପାଇପାରିବୁ। "
 
-#~ msgid "translator-credits"
-#~ msgstr "ଶୁଭ୍ରାଂଶୁ ବେହେରା <arya_subhransu@yahoo.co.in>"
