--- a/publican-redhat/pt-BR/Feedback.po
+++ b/publican-redhat/pt-BR/Feedback.po
@@ -1,13 +1,14 @@
-# translation of Feedback.po to Brazilian Portuguese
+# translation of Feedback.po to Portuguese
 # Leticia de Lima <ldelima@redhat.com>, 2007.
+# Glaucia Cintra <gcintra@redhat.com>, 2010.
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2010-02-26 01:23+0000\n"
-"PO-Revision-Date: 2007-10-23 14:26+1000\n"
-"Last-Translator: Leticia de Lima <ldelima@redhat.com>\n"
-"Language-Team: Brazilian Portuguese <en@li.org>\n"
+"PO-Revision-Date: 2010-03-01 16:27+1000\n"
+"Last-Translator: Glaucia Cintra <gcintra@redhat.com>\n"
+"Language-Team: Portuguese <en@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -16,25 +17,25 @@ msgstr ""
 #. Tag: title
 #, no-c-format
 msgid "Getting Help and Giving Feedback"
-msgstr ""
+msgstr "Obtendo Ajuda e Fornecendo Comentários"
 
 #. Tag: title
 #: Feedback.xml:8
 #, no-c-format
 msgid "Do You Need Help?"
-msgstr ""
+msgstr "Você precisa de ajuda?"
 
 #. Tag: primary
 #: Feedback.xml:10
 #, no-c-format
 msgid "help"
-msgstr ""
+msgstr "ajuda"
 
 #. Tag: secondary
 #: Feedback.xml:11
 #, no-c-format
 msgid "getting help"
-msgstr ""
+msgstr "obtendo ajuda"
 
 #. Tag: para
 #: Feedback.xml:13
@@ -42,13 +43,13 @@ msgstr ""
 msgid ""
 "If you experience difficulty with a procedure described in this "
 "documentation, you can find help in the following ways:"
-msgstr ""
+msgstr "Se encontrar dificuldades com o procedimento descrito nesta documentação, você pode encontrar ajuda das seguintes formas:"
 
 #. Tag: term
 #: Feedback.xml:18
 #, no-c-format
 msgid "Red Hat Knowledgebase"
-msgstr ""
+msgstr "Red Hat Knowledgebase"
 
 #. Tag: para
 #: Feedback.xml:20
@@ -58,12 +59,14 @@ msgid ""
 "ulink> to search or browse through technical support articles about Red Hat "
 "products."
 msgstr ""
+"Visite o Red Hat Knowledgebase em <ulink url=\"http://kbase.redhat.com\"></"
+"ulink> para procurar ou navegar pelos artigos sobre suporte técnico dos produtos da Red Hat."
 
 #. Tag: term
 #: Feedback.xml:26
 #, no-c-format
 msgid "Red Hat Global Support Services"
-msgstr ""
+msgstr "Serviços de Suporte Global da Red Hat"
 
 #. Tag: para
 #: Feedback.xml:28
@@ -73,12 +76,14 @@ msgid ""
 "Support Services (GSS). Visit <ulink url=\"http://support.redhat.com\"></"
 "ulink> for more information about obtaining help from GSS."
 msgstr ""
+"Sua subscrição da Red Hat lhe dá o direito de suporte do Serviço de Suporte Global da Red Hat (GSS). Visite <ulink url=\"http://support.redhat.com\"></"
+"ulink> para mais informações sobre como obter ajuda do GSS."
 
 #. Tag: term
 #: Feedback.xml:34
 #, no-c-format
 msgid "Other Red Hat documentation"
-msgstr ""
+msgstr "Outras documentações da Red Hat"
 
 #. Tag: para
 #: Feedback.xml:36
@@ -87,12 +92,14 @@ msgid ""
 "Access other Red Hat documentation at <ulink url=\"http://www.redhat.com/docs"
 "\"></ulink>"
 msgstr ""
+"Acesse outras documentações da Red Hat em <ulink url=\"http://www.redhat.com/docs"
+"\"></ulink>"
 
 #. Tag: term
 #: Feedback.xml:42
 #, no-c-format
 msgid "Red Hat electronic mailing lists"
-msgstr ""
+msgstr "Listas de correio eletrônico da Red Hat"
 
 #. Tag: para
 #: Feedback.xml:44
@@ -103,13 +110,13 @@ msgid ""
 "lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\"></ulink>. "
 "Click on the name of any list to subscribe to that list or to access the "
 "list archives."
-msgstr ""
+msgstr "A Red Hat acomoda um grande número de listas de correio eletrônico para discussão de software e tecnologias da Red Hat. Você pode encontrar uma lista contendo as listas públicas disponíveis em <ulink url=\"https://www.redhat.com/mailman/listinfo\"></ulink>. Clique no nome de qualquer lista para subscrever àquela lista ou acessar o histórico das listas."
 
 #. Tag: title
 #: Feedback.xml:53
 #, no-c-format
 msgid "We Need Feedback!"
-msgstr "Nós precisamos de seu comentário"
+msgstr "Nós precisamos do seu Comentário!"
 
 #. Tag: primary
 #: Feedback.xml:55
@@ -141,12 +148,12 @@ msgstr ""
 
 #. Tag: para
 #: Feedback.xml:61
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "When submitting a bug report, be sure to mention the manual&#39;s "
 "identifier: <citetitle>&BOOKID;</citetitle>"
 msgstr ""
-"Uma vez submetendo um relatório de bug, por favor mencione a identificação "
+"Ao submeter um relatório de erro, certifique-se de mencionar a identificação "
 "do manual:<citetitle>&BOOKID;</citetitle>."
 
 #. Tag: para
@@ -163,5 +170,3 @@ msgstr ""
 "encontrado um erro, por favor inclua o número da seção e alguns detalhes a "
 "respeito do texto para a nossa melhor identificação."
 
-#~ msgid "translator-credits"
-#~ msgstr "créditos do tradutor"
