--- a/publican-redhat/ta-IN/Feedback.po
+++ b/publican-redhat/ta-IN/Feedback.po
@@ -1,18 +1,18 @@
 # translation of Feedback.po to Tamil
-# I. Felix <ifelix@redhat.com>, 2007.
 # translation of Feedback.po to
+# I. Felix <ifelix@redhat.com>, 2007, 2010.
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2010-02-26 01:23+0000\n"
-"PO-Revision-Date: 2007-10-29 16:50+0530\n"
+"PO-Revision-Date: 2010-03-02 10:54+0530\n"
 "Last-Translator: I. Felix <ifelix@redhat.com>\n"
-"Language-Team: Tamil <fedora-trans-ta@redhat.com>\n"
+"Language-Team: American English <kde-i18n-doc@kde.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.4\n"
+"X-Generator: Lokalize 1.0\n"
 "Plural-Forms: nplurals=2; plural=(n!=1);\n"
 "\n"
 "\n"
@@ -20,25 +20,25 @@ msgstr ""
 #. Tag: title
 #, no-c-format
 msgid "Getting Help and Giving Feedback"
-msgstr ""
+msgstr "உதவி பெறுதல் மற்றும் கருத்து வழங்குதல்"
 
 #. Tag: title
 #: Feedback.xml:8
 #, no-c-format
 msgid "Do You Need Help?"
-msgstr ""
+msgstr "உங்களுக்கு உதவி தேவையா?"
 
 #. Tag: primary
 #: Feedback.xml:10
 #, no-c-format
 msgid "help"
-msgstr ""
+msgstr "உதவி"
 
 #. Tag: secondary
 #: Feedback.xml:11
 #, no-c-format
 msgid "getting help"
-msgstr ""
+msgstr "உதவி பெறுதல்"
 
 #. Tag: para
 #: Feedback.xml:13
@@ -47,12 +47,13 @@ msgid ""
 "If you experience difficulty with a procedure described in this "
 "documentation, you can find help in the following ways:"
 msgstr ""
+"இந்த ஆவணத்தில் குறிப்பிட்ட நெறிமுறைகளை கடினமாக கொண்டால், பின்வரும் வழிகளில் உதவியை பெறலாம்: "
 
 #. Tag: term
 #: Feedback.xml:18
 #, no-c-format
 msgid "Red Hat Knowledgebase"
-msgstr ""
+msgstr "Red Hat அறிவுக்களஞ்சியம்"
 
 #. Tag: para
 #: Feedback.xml:20
@@ -62,12 +63,14 @@ msgid ""
 "ulink> to search or browse through technical support articles about Red Hat "
 "products."
 msgstr ""
+"Red Hat அறிவுக்களஞ்சியத்தை <ulink url=\"http://kbase.redhat.com\"></"
+"ulink>இல் Red Hat தயாரிப்புகள் பற்றிய தொழில்நுட்ப சேவை கட்டுரைகளை தேடி வாசிக்க செல்லவும்."
 
 #. Tag: term
 #: Feedback.xml:26
 #, no-c-format
 msgid "Red Hat Global Support Services"
-msgstr ""
+msgstr "Red Hat Global Support Services"
 
 #. Tag: para
 #: Feedback.xml:28
@@ -77,12 +80,15 @@ msgid ""
 "Support Services (GSS). Visit <ulink url=\"http://support.redhat.com\"></"
 "ulink> for more information about obtaining help from GSS."
 msgstr ""
+"உங்கள் Red Hat சந்தா Red Hat Global Support Services (GSS)இலிருந்து சேவை வழங்க "
+"உரிமப்படுத்துகிறது. GSSஇலிருந்து மேலும் உதவிகளை பெறவதை பற்றிய மேலும் தகவலுக்கு <ulink "
+"url=\"http://support.redhat.com\"></ulink>ஐ பார்க்கவும்."
 
 #. Tag: term
 #: Feedback.xml:34
 #, no-c-format
 msgid "Other Red Hat documentation"
-msgstr ""
+msgstr "வேறு Red Hat ஆவணம்"
 
 #. Tag: para
 #: Feedback.xml:36
@@ -91,12 +97,14 @@ msgid ""
 "Access other Red Hat documentation at <ulink url=\"http://www.redhat.com/docs"
 "\"></ulink>"
 msgstr ""
+"வேறு Red Hat ஆவணத்தை <ulink url=\"http://www.redhat.com/docs"
+"\"></ulink>இல் அணுகவும்"
 
 #. Tag: term
 #: Feedback.xml:42
 #, no-c-format
 msgid "Red Hat electronic mailing lists"
-msgstr ""
+msgstr "Red Hat மின் அஞ்சல் குழுக்கள்"
 
 #. Tag: para
 #: Feedback.xml:44
@@ -108,6 +116,10 @@ msgid ""
 "Click on the name of any list to subscribe to that list or to access the "
 "list archives."
 msgstr ""
+"Red Hat மென்பொருள் மற்றும் தொழில்நுட்பம் பற்றி விவாதிக்க பல மின்னஞ்சல் குழுக்களை Red Hat "
+"நிறுவியுள்ளது. பொதுவாக கிடைக்கும் குழுக்களின் பட்டியலை <ulink url=\"https://www.redhat."
+"com/mailman/listinfo\"></ulink>இல் பார்க்கலாம். ஏதாவது பட்டியலின் பெயரை கிளிக் செய்து "
+"சந்தாப்படுத்தி அதன் காப்பகத்தை அணுகலாம்."
 
 #. Tag: title
 #: Feedback.xml:53
@@ -145,12 +157,12 @@ msgstr ""
 
 #. Tag: para
 #: Feedback.xml:61
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "When submitting a bug report, be sure to mention the manual&#39;s "
 "identifier: <citetitle>&BOOKID;</citetitle>"
 msgstr ""
-"ஒரு பிழை அறிக்கையை சமர்ப்பிக்கும் போது கையேடு அடையாளப்படுத்தியை குறிப்பிடவும்: "
+"ஒரு பிழை அறிக்கையை சமர்ப்பிக்கும் போது கையேடு&#39;s அடையாளப்படுத்தியை குறிப்பிடவும்: "
 "<citetitle>&BOOKID;</citetitle>"
 
 #. Tag: para
