--- a/publican-redhat/zh-CN/Feedback.po
+++ b/publican-redhat/zh-CN/Feedback.po
@@ -1,13 +1,15 @@
-# translation of Feedback.po to
+# translation of Feedback.po to Simplified Chinese
 # Xi HUANG <xhuang@redhat.com>, 2007.
+# Leah Liu <lliu@redhat.com>, 2010.
+# translation of Feedback.po to
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2010-02-26 01:23+0000\n"
-"PO-Revision-Date: 2007-10-23 09:58+1000\n"
-"Last-Translator: Xi HUANG <xhuang@redhat.com>\n"
-"Language-Team:  <en@li.org>\n"
+"PO-Revision-Date: 2010-03-01 15:14+1000\n"
+"Last-Translator: Leah Liu <lliu@redhat.com>\n"
+"Language-Team: Simplified Chinese\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -16,25 +18,25 @@ msgstr ""
 #. Tag: title
 #, no-c-format
 msgid "Getting Help and Giving Feedback"
-msgstr ""
+msgstr "获得帮助并提供反馈信息"
 
 #. Tag: title
 #: Feedback.xml:8
 #, no-c-format
 msgid "Do You Need Help?"
-msgstr ""
+msgstr "您需要帮助吗？"
 
 #. Tag: primary
 #: Feedback.xml:10
 #, no-c-format
 msgid "help"
-msgstr ""
+msgstr "帮助"
 
 #. Tag: secondary
 #: Feedback.xml:11
 #, no-c-format
 msgid "getting help"
-msgstr ""
+msgstr "获得帮助"
 
 #. Tag: para
 #: Feedback.xml:13
@@ -42,13 +44,13 @@ msgstr ""
 msgid ""
 "If you experience difficulty with a procedure described in this "
 "documentation, you can find help in the following ways:"
-msgstr ""
+msgstr "如果您对本文档论述的步骤有疑问，您可以通过以下方法获得帮助："
 
 #. Tag: term
 #: Feedback.xml:18
 #, no-c-format
 msgid "Red Hat Knowledgebase"
-msgstr ""
+msgstr "红帽知识库"
 
 #. Tag: para
 #: Feedback.xml:20
@@ -57,13 +59,13 @@ msgid ""
 "Visit the Red Hat Knowledgebase at <ulink url=\"http://kbase.redhat.com\"></"
 "ulink> to search or browse through technical support articles about Red Hat "
 "products."
-msgstr ""
+msgstr "访问红帽知识库 <ulink url=\"http://kbase.redhat.com\"></ulink> 搜索或者浏览有关红帽产品的技术支持文章。"
 
 #. Tag: term
 #: Feedback.xml:26
 #, no-c-format
 msgid "Red Hat Global Support Services"
-msgstr ""
+msgstr "红帽全球支持服务"
 
 #. Tag: para
 #: Feedback.xml:28
@@ -72,13 +74,13 @@ msgid ""
 "Your Red Hat subscription entitles you to support from Red Hat Global "
 "Support Services (GSS). Visit <ulink url=\"http://support.redhat.com\"></"
 "ulink> for more information about obtaining help from GSS."
-msgstr ""
+msgstr "您的红帽订阅可让您获得红帽全球支持服务（GSS）。有关从 GSS 获得帮助的详情请访问 <ulink url=\"http://support.redhat.com\"></ulink>。"
 
 #. Tag: term
 #: Feedback.xml:34
 #, no-c-format
 msgid "Other Red Hat documentation"
-msgstr ""
+msgstr "其它红帽文档"
 
 #. Tag: para
 #: Feedback.xml:36
@@ -86,13 +88,13 @@ msgstr ""
 msgid ""
 "Access other Red Hat documentation at <ulink url=\"http://www.redhat.com/docs"
 "\"></ulink>"
-msgstr ""
+msgstr "在 <ulink url=\"http://www.redhat.com/docs\"></ulink> 访问其它红帽文档"
 
 #. Tag: term
 #: Feedback.xml:42
 #, no-c-format
 msgid "Red Hat electronic mailing lists"
-msgstr ""
+msgstr "红帽电子邮件列表"
 
 #. Tag: para
 #: Feedback.xml:44
@@ -103,7 +105,7 @@ msgid ""
 "lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\"></ulink>. "
 "Click on the name of any list to subscribe to that list or to access the "
 "list archives."
-msgstr ""
+msgstr "红帽托管了大量讨论红帽软件和技术的电子邮件列表。公开列表位于 <ulink url=\"https://www.redhat.com/mailman/listinfo\"></ulink>。点击任意列表名称即可订阅该列表或者访问列表归档。"
 
 #. Tag: title
 #: Feedback.xml:53
@@ -133,17 +135,17 @@ msgid ""
 "\">http://bugzilla.redhat.com/</ulink> against the product "
 "<application>&PRODUCT;.</application>"
 msgstr ""
-"如​果​你​发​现​了​排​印​错​误​或​者​有​改​进​本​文​档​的​建​议​，我​们​希​望​能​听​取​你​的​意​见​。​请​在 "
+"如​果​您​发​现​了​排​印​错​误​或​者​有​改​进​本​文​档​的​建​议​，我​们​希​望​能​听​取​您​的​意​见​。​请​在 "
 "Bugzilla <ulink url=\"http://bugzilla.redhat.com/\">http://bugzilla.redhat."
-"com/</ulink> 里​提​交​关​于产品 <application>&PRODUCT;.</application> 的​报​告​。​"
+"com/</ulink> 中​根据产品 <application>&PRODUCT;.</application> 提交​报​告​。​"
 
 #. Tag: para
 #: Feedback.xml:61
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "When submitting a bug report, be sure to mention the manual&#39;s "
 "identifier: <citetitle>&BOOKID;</citetitle>"
-msgstr "提交报告时，请​记​得​提​及​文​档​的​标​识​符​：<citetitle>&BOOKID;</citetitle>"
+msgstr "提交报告时，请​提供​文​档​的​标​识​符​：<citetitle>&BOOKID;</citetitle>"
 
 #. Tag: para
 #: Feedback.xml:64
@@ -153,9 +155,5 @@ msgid ""
 "specific as possible when describing it. If you have found an error, please "
 "include the section number and some of the surrounding text so we can find "
 "it easily."
-msgstr ""
-"如​果​你​有​改​进​本​文​档​的​建​议​，请​尽​量​将​其​明​确​化​。​如​果​你​发​现​了​错​误​，请​指​出​章​节​号​以​"
-"及​其​周​围​的​相​关​文​字​，以​便​我​们​尽​快​找​到​并​更​正​该​错​误​。​"
+msgstr "如​果​您​有​改​进​本​文​档​的​建​议​，请​尽​量​将​其​明​确​化​。​如​果​您​发​现​了​错​误​，请​指​出​章​节​号​以及上下文​，以​便​我​们​尽​快​找​到​并​更​正​该​。​"
 
-#~ msgid "translator-credits"
-#~ msgstr "translator-credits"
