--- a/publican-redhat/zh-TW/Feedback.po
+++ b/publican-redhat/zh-TW/Feedback.po
@@ -1,13 +1,14 @@
 # translation of Feedback.po to Traditional Chinese
 # Terry Chuang <terry.chuang@redhat.com>, 2007.
+# Chester Cheng <ccheng@紅帽子>, 2010.
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2010-02-26 01:23+0000\n"
-"PO-Revision-Date: 2007-10-23 17:06+1000\n"
-"Last-Translator: Terry Chuang <terry.chuang@redhat.com>\n"
-"Language-Team: Traditional Chinese <zh-TW@li.org>\n"
+"PO-Revision-Date: 2010-03-01 12:41+1000\n"
+"Last-Translator: Chester Cheng <ccheng@紅帽子>\n"
+"Language-Team: Traditional Chinese <zh_TW@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -16,25 +17,25 @@ msgstr ""
 #. Tag: title
 #, no-c-format
 msgid "Getting Help and Giving Feedback"
-msgstr ""
+msgstr "取得幫助，提供意見"
 
 #. Tag: title
 #: Feedback.xml:8
 #, no-c-format
 msgid "Do You Need Help?"
-msgstr ""
+msgstr "需要幫助嗎？"
 
 #. Tag: primary
 #: Feedback.xml:10
 #, no-c-format
 msgid "help"
-msgstr ""
+msgstr "幫助"
 
 #. Tag: secondary
 #: Feedback.xml:11
 #, no-c-format
 msgid "getting help"
-msgstr ""
+msgstr "取得幫助"
 
 #. Tag: para
 #: Feedback.xml:13
@@ -42,13 +43,13 @@ msgstr ""
 msgid ""
 "If you experience difficulty with a procedure described in this "
 "documentation, you can find help in the following ways:"
-msgstr ""
+msgstr "如果您無法進行本文所述之步驟，可採取下列步驟："
 
 #. Tag: term
 #: Feedback.xml:18
 #, no-c-format
 msgid "Red Hat Knowledgebase"
-msgstr ""
+msgstr "Red Hat 知識庫"
 
 #. Tag: para
 #: Feedback.xml:20
@@ -57,13 +58,13 @@ msgid ""
 "Visit the Red Hat Knowledgebase at <ulink url=\"http://kbase.redhat.com\"></"
 "ulink> to search or browse through technical support articles about Red Hat "
 "products."
-msgstr ""
+msgstr "參閱 Red Hat 知識庫，搜尋或瀏覽 Red Hat 產品的技術服務文章，網址是 <ulink url=\"http://kbase.redhat.com\"></ulink>。"
 
 #. Tag: term
 #: Feedback.xml:26
 #, no-c-format
 msgid "Red Hat Global Support Services"
-msgstr ""
+msgstr "Red Hat 全球支援服務"
 
 #. Tag: para
 #: Feedback.xml:28
@@ -72,13 +73,13 @@ msgid ""
 "Your Red Hat subscription entitles you to support from Red Hat Global "
 "Support Services (GSS). Visit <ulink url=\"http://support.redhat.com\"></"
 "ulink> for more information about obtaining help from GSS."
-msgstr ""
+msgstr "Red Hat 訂閱服務能讓您從 Red Hat 的全球支援服務（GSS，Global Support Services）取得支援。詳情請參閱 <ulink url=\"http://support.redhat.com\"></ulink>。"
 
 #. Tag: term
 #: Feedback.xml:34
 #, no-c-format
 msgid "Other Red Hat documentation"
-msgstr ""
+msgstr "其它 Red Hat 文件"
 
 #. Tag: para
 #: Feedback.xml:36
@@ -86,13 +87,13 @@ msgstr ""
 msgid ""
 "Access other Red Hat documentation at <ulink url=\"http://www.redhat.com/docs"
 "\"></ulink>"
-msgstr ""
+msgstr "從 <ulink url=\"http://www.redhat.com/docs\"></ulink> 取得其它 Red Hat 的文件。"
 
 #. Tag: term
 #: Feedback.xml:42
 #, no-c-format
 msgid "Red Hat electronic mailing lists"
-msgstr ""
+msgstr "Red Hat 郵件論壇"
 
 #. Tag: para
 #: Feedback.xml:44
@@ -103,7 +104,7 @@ msgid ""
 "lists at <ulink url=\"https://www.redhat.com/mailman/listinfo\"></ulink>. "
 "Click on the name of any list to subscribe to that list or to access the "
 "list archives."
-msgstr ""
+msgstr "Red Hat 有許多電子郵件論壇，討論 Red Hat 的軟體與技術。您可以從公開的 <ulink url=\"https://www.redhat.com/mailman/listinfo\"></ulink> 找到這些論壇。按下郵件論壇的名稱後，您可以選擇訂閱或檢視過去的紀錄。"
 
 #. Tag: title
 #: Feedback.xml:53
@@ -140,12 +141,11 @@ msgstr ""
 
 #. Tag: para
 #: Feedback.xml:61
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "When submitting a bug report, be sure to mention the manual&#39;s "
 "identifier: <citetitle>&BOOKID;</citetitle>"
-msgstr ""
-"當您提交錯誤報告時，請務必提供指南的識別碼：<citetitle>&BOOKID;</citetitle>"
+msgstr "當您提交錯誤報告時，請務必提供指南的識別碼：<citetitle>&BOOKID;</citetitle>"
 
 #. Tag: para
 #: Feedback.xml:64
@@ -159,5 +159,3 @@ msgstr ""
 "若您擁有改善文件的建議，請儘可能地將它詳細描述清楚。若您您發現錯誤的話，請包"
 "含區段編號以及該錯誤周圍的部分文字，如此一來我們便能輕易地找到該錯誤。"
 
-#~ msgid "translator-credits"
-#~ msgstr "譯者姓名︰莊佳儒（Terry Chuang）2007"
